--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
 
 <div style="text-align:center; margin-bottom: 30px;">
     <a href="index.html" style="margin: 0 20px; font-weight: bold;">Matchups</a>
-    <a href="nrfi_predictions_20250417.html" style="margin: 0 20px; font-weight: bold;">NRFI Predictions</a>
+    <a href="nrfi.html" style="margin: 0 20px; font-weight: bold;">NRFI Predictions</a>
 </div>
+
 
 <div style="text-align:center; margin-bottom: 20px;">
     <img src="https://www.mlbstatic.com/team-logos/league-on-dark/1.svg" alt="MLB Logo" style="height: 60px;">
@@ -2294,21 +2295,5 @@
     </div>
 
     <footer>&copy; 2025 MLB Data Analysis | donsMLBPlayground</footer>
-
-<script>
-function toggleSection(sectionId, buttonId, showText = "See More", hideText = "See Less") {
-    const section = document.getElementById(sectionId);
-    const button = document.getElementById(buttonId);
-
-    if (section.style.display === "none" || section.style.display === "") {
-        section.style.display = "block";
-        if (button) button.innerText = hideText;
-    } else {
-        section.style.display = "none";
-        if (button) button.innerText = showText;
-    }
-}
-</script>
 </body>
 </html>
-
