--- a/slate.html
+++ b/slate.html
@@ -24,75 +24,75 @@ a:hover {text-decoration: underline;}
 <h1 style='text-align:center;'>The Slate</h1>
 <style type="text/css">
 </style>
-<table id="T_d8711">
+<table id="T_5a26c">
   <thead>
     <tr>
-      <th id="T_d8711_level0_col0" class="col_heading level0 col0" >Game Time</th>
-      <th id="T_d8711_level0_col1" class="col_heading level0 col1" >Venue</th>
-      <th id="T_d8711_level0_col2" class="col_heading level0 col2" >Away Team</th>
-      <th id="T_d8711_level0_col3" class="col_heading level0 col3" >Home Team</th>
+      <th id="T_5a26c_level0_col0" class="col_heading level0 col0" >Game Time</th>
+      <th id="T_5a26c_level0_col1" class="col_heading level0 col1" >Venue</th>
+      <th id="T_5a26c_level0_col2" class="col_heading level0 col2" >Away Team</th>
+      <th id="T_5a26c_level0_col3" class="col_heading level0 col3" >Home Team</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td id="T_d8711_row0_col0" class="data row0 col0" >12:10 PM ET</td>
-      <td id="T_d8711_row0_col1" class="data row0 col1" >loanDepot park</td>
-      <td id="T_d8711_row0_col2" class="data row0 col2" >Arizona Diamondbacks</td>
-      <td id="T_d8711_row0_col3" class="data row0 col3" >Miami Marlins</td>
+      <td id="T_5a26c_row0_col0" class="data row0 col0" >N/A</td>
+      <td id="T_5a26c_row0_col1" class="data row0 col1" >loanDepot park</td>
+      <td id="T_5a26c_row0_col2" class="data row0 col2" >Arizona Diamondbacks</td>
+      <td id="T_5a26c_row0_col3" class="data row0 col3" >Miami Marlins</td>
     </tr>
     <tr>
-      <td id="T_d8711_row1_col0" class="data row1 col0" >12:35 PM ET</td>
-      <td id="T_d8711_row1_col1" class="data row1 col1" >PNC Park</td>
-      <td id="T_d8711_row1_col2" class="data row1 col2" >Washington Nationals</td>
-      <td id="T_d8711_row1_col3" class="data row1 col3" >Pittsburgh Pirates</td>
+      <td id="T_5a26c_row1_col0" class="data row1 col0" >N/A</td>
+      <td id="T_5a26c_row1_col1" class="data row1 col1" >PNC Park</td>
+      <td id="T_5a26c_row1_col2" class="data row1 col2" >Washington Nationals</td>
+      <td id="T_5a26c_row1_col3" class="data row1 col3" >Pittsburgh Pirates</td>
     </tr>
     <tr>
-      <td id="T_d8711_row2_col0" class="data row2 col0" >12:40 PM ET</td>
-      <td id="T_d8711_row2_col1" class="data row2 col1" >Great American Ball Park</td>
-      <td id="T_d8711_row2_col2" class="data row2 col2" >Seattle Mariners</td>
-      <td id="T_d8711_row2_col3" class="data row2 col3" >Cincinnati Reds</td>
+      <td id="T_5a26c_row2_col0" class="data row2 col0" >N/A</td>
+      <td id="T_5a26c_row2_col1" class="data row2 col1" >Great American Ball Park</td>
+      <td id="T_5a26c_row2_col2" class="data row2 col2" >Seattle Mariners</td>
+      <td id="T_5a26c_row2_col3" class="data row2 col3" >Cincinnati Reds</td>
     </tr>
     <tr>
-      <td id="T_d8711_row3_col0" class="data row3 col0" >2:10 PM ET</td>
-      <td id="T_d8711_row3_col1" class="data row3 col1" >Rate Field</td>
-      <td id="T_d8711_row3_col2" class="data row3 col2" >Athletics</td>
-      <td id="T_d8711_row3_col3" class="data row3 col3" >Chicago White Sox</td>
+      <td id="T_5a26c_row3_col0" class="data row3 col0" >N/A</td>
+      <td id="T_5a26c_row3_col1" class="data row3 col1" >Rate Field</td>
+      <td id="T_5a26c_row3_col2" class="data row3 col2" >Athletics</td>
+      <td id="T_5a26c_row3_col3" class="data row3 col3" >Chicago White Sox</td>
     </tr>
     <tr>
-      <td id="T_d8711_row4_col0" class="data row4 col0" >4:05 PM ET</td>
-      <td id="T_d8711_row4_col1" class="data row4 col1" >Citizens Bank Park</td>
-      <td id="T_d8711_row4_col2" class="data row4 col2" >San Francisco Giants</td>
-      <td id="T_d8711_row4_col3" class="data row4 col3" >Philadelphia Phillies</td>
+      <td id="T_5a26c_row4_col0" class="data row4 col0" >N/A</td>
+      <td id="T_5a26c_row4_col1" class="data row4 col1" >Citizens Bank Park</td>
+      <td id="T_5a26c_row4_col2" class="data row4 col2" >San Francisco Giants</td>
+      <td id="T_5a26c_row4_col3" class="data row4 col3" >Philadelphia Phillies</td>
     </tr>
     <tr>
-      <td id="T_d8711_row5_col0" class="data row5 col0" >6:35 PM ET</td>
-      <td id="T_d8711_row5_col1" class="data row5 col1" >Oriole Park at Camden Yards</td>
-      <td id="T_d8711_row5_col2" class="data row5 col2" >Cleveland Guardians</td>
-      <td id="T_d8711_row5_col3" class="data row5 col3" >Baltimore Orioles</td>
+      <td id="T_5a26c_row5_col0" class="data row5 col0" >N/A</td>
+      <td id="T_5a26c_row5_col1" class="data row5 col1" >Oriole Park at Camden Yards</td>
+      <td id="T_5a26c_row5_col2" class="data row5 col2" >Cleveland Guardians</td>
+      <td id="T_5a26c_row5_col3" class="data row5 col3" >Baltimore Orioles</td>
     </tr>
     <tr>
-      <td id="T_d8711_row6_col0" class="data row6 col0" >6:40 PM ET</td>
-      <td id="T_d8711_row6_col1" class="data row6 col1" >Comerica Park</td>
-      <td id="T_d8711_row6_col2" class="data row6 col2" >Kansas City Royals</td>
-      <td id="T_d8711_row6_col3" class="data row6 col3" >Detroit Tigers</td>
+      <td id="T_5a26c_row6_col0" class="data row6 col0" >N/A</td>
+      <td id="T_5a26c_row6_col1" class="data row6 col1" >Comerica Park</td>
+      <td id="T_5a26c_row6_col2" class="data row6 col2" >Kansas City Royals</td>
+      <td id="T_5a26c_row6_col3" class="data row6 col3" >Detroit Tigers</td>
     </tr>
     <tr>
-      <td id="T_d8711_row7_col0" class="data row7 col0" >7:05 PM ET</td>
-      <td id="T_d8711_row7_col1" class="data row7 col1" >George M. Steinbrenner Field</td>
-      <td id="T_d8711_row7_col2" class="data row7 col2" >New York Yankees</td>
-      <td id="T_d8711_row7_col3" class="data row7 col3" >Tampa Bay Rays</td>
+      <td id="T_5a26c_row7_col0" class="data row7 col0" >N/A</td>
+      <td id="T_5a26c_row7_col1" class="data row7 col1" >George M. Steinbrenner Field</td>
+      <td id="T_5a26c_row7_col2" class="data row7 col2" >New York Yankees</td>
+      <td id="T_5a26c_row7_col3" class="data row7 col3" >Tampa Bay Rays</td>
     </tr>
     <tr>
-      <td id="T_d8711_row8_col0" class="data row8 col0" >7:10 PM ET</td>
-      <td id="T_d8711_row8_col1" class="data row8 col1" >Citi Field</td>
-      <td id="T_d8711_row8_col2" class="data row8 col2" >St. Louis Cardinals</td>
-      <td id="T_d8711_row8_col3" class="data row8 col3" >New York Mets</td>
+      <td id="T_5a26c_row8_col0" class="data row8 col0" >N/A</td>
+      <td id="T_5a26c_row8_col1" class="data row8 col1" >Citi Field</td>
+      <td id="T_5a26c_row8_col2" class="data row8 col2" >St. Louis Cardinals</td>
+      <td id="T_5a26c_row8_col3" class="data row8 col3" >New York Mets</td>
     </tr>
     <tr>
-      <td id="T_d8711_row9_col0" class="data row9 col0" >8:05 PM ET</td>
-      <td id="T_d8711_row9_col1" class="data row9 col1" >Globe Life Field</td>
-      <td id="T_d8711_row9_col2" class="data row9 col2" >Los Angeles Angels</td>
-      <td id="T_d8711_row9_col3" class="data row9 col3" >Texas Rangers</td>
+      <td id="T_5a26c_row9_col0" class="data row9 col0" >N/A</td>
+      <td id="T_5a26c_row9_col1" class="data row9 col1" >Globe Life Field</td>
+      <td id="T_5a26c_row9_col2" class="data row9 col2" >Los Angeles Angels</td>
+      <td id="T_5a26c_row9_col3" class="data row9 col3" >Texas Rangers</td>
     </tr>
   </tbody>
 </table>
