--- a/slate.html
+++ b/slate.html
@@ -20,109 +20,110 @@ a:hover {text-decoration: underline;}
     <a href="nrfi.html" style="margin: 0 20px; font-weight: bold;">NRFI Predictions</a>
     <a href="pitchers.html" style="margin: 0 20px; font-weight: bold;">Pitchers</a>
     <a href="slate.html" style="margin: 0 20px; font-weight: bold;">Today's Slate</a>
+    <a href="about.html" style="margin: 0 20px; font-weight: bold;">About</a>
 </div>
 <h1 style='text-align:center;'>The Slate</h1>
 <style type="text/css">
 </style>
-<table id="T_2a714">
+<table id="T_6c61c">
   <thead>
     <tr>
-      <th id="T_2a714_level0_col0" class="col_heading level0 col0" >Game Time</th>
-      <th id="T_2a714_level0_col1" class="col_heading level0 col1" >Venue</th>
-      <th id="T_2a714_level0_col2" class="col_heading level0 col2" >Away Team</th>
-      <th id="T_2a714_level0_col3" class="col_heading level0 col3" >Home Team</th>
+      <th id="T_6c61c_level0_col0" class="col_heading level0 col0" >Game Time</th>
+      <th id="T_6c61c_level0_col1" class="col_heading level0 col1" >Venue</th>
+      <th id="T_6c61c_level0_col2" class="col_heading level0 col2" >Away Team</th>
+      <th id="T_6c61c_level0_col3" class="col_heading level0 col3" >Home Team</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td id="T_2a714_row0_col0" class="data row0 col0" >1:05 PM ET</td>
-      <td id="T_2a714_row0_col1" class="data row0 col1" >Citizens Bank Park</td>
-      <td id="T_2a714_row0_col2" class="data row0 col2" >Miami Marlins</td>
-      <td id="T_2a714_row0_col3" class="data row0 col3" >Philadelphia Phillies</td>
+      <td id="T_6c61c_row0_col0" class="data row0 col0" >1:05 PM ET</td>
+      <td id="T_6c61c_row0_col1" class="data row0 col1" >Citizens Bank Park</td>
+      <td id="T_6c61c_row0_col2" class="data row0 col2" >Miami Marlins</td>
+      <td id="T_6c61c_row0_col3" class="data row0 col3" >Philadelphia Phillies</td>
     </tr>
     <tr>
-      <td id="T_2a714_row1_col0" class="data row1 col0" >1:10 PM ET</td>
-      <td id="T_2a714_row1_col1" class="data row1 col1" >Comerica Park</td>
-      <td id="T_2a714_row1_col2" class="data row1 col2" >Kansas City Royals</td>
-      <td id="T_2a714_row1_col3" class="data row1 col3" >Detroit Tigers</td>
+      <td id="T_6c61c_row1_col0" class="data row1 col0" >1:10 PM ET</td>
+      <td id="T_6c61c_row1_col1" class="data row1 col1" >Comerica Park</td>
+      <td id="T_6c61c_row1_col2" class="data row1 col2" >Kansas City Royals</td>
+      <td id="T_6c61c_row1_col3" class="data row1 col3" >Detroit Tigers</td>
     </tr>
     <tr>
-      <td id="T_2a714_row2_col0" class="data row2 col0" >2:20 PM ET</td>
-      <td id="T_2a714_row2_col1" class="data row2 col1" >Wrigley Field</td>
-      <td id="T_2a714_row2_col2" class="data row2 col2" >Arizona Diamondbacks</td>
-      <td id="T_2a714_row2_col3" class="data row2 col3" >Chicago Cubs</td>
+      <td id="T_6c61c_row2_col0" class="data row2 col0" >2:20 PM ET</td>
+      <td id="T_6c61c_row2_col1" class="data row2 col1" >Wrigley Field</td>
+      <td id="T_6c61c_row2_col2" class="data row2 col2" >Arizona Diamondbacks</td>
+      <td id="T_6c61c_row2_col3" class="data row2 col3" >Chicago Cubs</td>
     </tr>
     <tr>
-      <td id="T_2a714_row3_col0" class="data row3 col0" >3:07 PM ET</td>
-      <td id="T_2a714_row3_col1" class="data row3 col1" >Rogers Centre</td>
-      <td id="T_2a714_row3_col2" class="data row3 col2" >Seattle Mariners</td>
-      <td id="T_2a714_row3_col3" class="data row3 col3" >Toronto Blue Jays</td>
+      <td id="T_6c61c_row3_col0" class="data row3 col0" >3:07 PM ET</td>
+      <td id="T_6c61c_row3_col1" class="data row3 col1" >Rogers Centre</td>
+      <td id="T_6c61c_row3_col2" class="data row3 col2" >Seattle Mariners</td>
+      <td id="T_6c61c_row3_col3" class="data row3 col3" >Toronto Blue Jays</td>
     </tr>
     <tr>
-      <td id="T_2a714_row4_col0" class="data row4 col0" >4:10 PM ET</td>
-      <td id="T_2a714_row4_col1" class="data row4 col1" >Coors Field</td>
-      <td id="T_2a714_row4_col2" class="data row4 col2" >Washington Nationals</td>
-      <td id="T_2a714_row4_col3" class="data row4 col3" >Colorado Rockies</td>
+      <td id="T_6c61c_row4_col0" class="data row4 col0" >4:10 PM ET</td>
+      <td id="T_6c61c_row4_col1" class="data row4 col1" >Coors Field</td>
+      <td id="T_6c61c_row4_col2" class="data row4 col2" >Washington Nationals</td>
+      <td id="T_6c61c_row4_col3" class="data row4 col3" >Colorado Rockies</td>
     </tr>
     <tr>
-      <td id="T_2a714_row5_col0" class="data row5 col0" >4:05 PM ET</td>
-      <td id="T_2a714_row5_col1" class="data row5 col1" >Oriole Park at Camden Yards</td>
-      <td id="T_2a714_row5_col2" class="data row5 col2" >Cincinnati Reds</td>
-      <td id="T_2a714_row5_col3" class="data row5 col3" >Baltimore Orioles</td>
+      <td id="T_6c61c_row5_col0" class="data row5 col0" >4:05 PM ET</td>
+      <td id="T_6c61c_row5_col1" class="data row5 col1" >Oriole Park at Camden Yards</td>
+      <td id="T_6c61c_row5_col2" class="data row5 col2" >Cincinnati Reds</td>
+      <td id="T_6c61c_row5_col3" class="data row5 col3" >Baltimore Orioles</td>
     </tr>
     <tr>
-      <td id="T_2a714_row6_col0" class="data row6 col0" >4:05 PM ET</td>
-      <td id="T_2a714_row6_col1" class="data row6 col1" >PNC Park</td>
-      <td id="T_2a714_row6_col2" class="data row6 col2" >Cleveland Guardians</td>
-      <td id="T_2a714_row6_col3" class="data row6 col3" >Pittsburgh Pirates</td>
+      <td id="T_6c61c_row6_col0" class="data row6 col0" >4:05 PM ET</td>
+      <td id="T_6c61c_row6_col1" class="data row6 col1" >PNC Park</td>
+      <td id="T_6c61c_row6_col2" class="data row6 col2" >Cleveland Guardians</td>
+      <td id="T_6c61c_row6_col3" class="data row6 col3" >Pittsburgh Pirates</td>
     </tr>
     <tr>
-      <td id="T_2a714_row7_col0" class="data row7 col0" >4:05 PM ET</td>
-      <td id="T_2a714_row7_col1" class="data row7 col1" >Citi Field</td>
-      <td id="T_2a714_row7_col2" class="data row7 col2" >St. Louis Cardinals</td>
-      <td id="T_2a714_row7_col3" class="data row7 col3" >New York Mets</td>
+      <td id="T_6c61c_row7_col0" class="data row7 col0" >4:05 PM ET</td>
+      <td id="T_6c61c_row7_col1" class="data row7 col1" >Citi Field</td>
+      <td id="T_6c61c_row7_col2" class="data row7 col2" >St. Louis Cardinals</td>
+      <td id="T_6c61c_row7_col3" class="data row7 col3" >New York Mets</td>
     </tr>
     <tr>
-      <td id="T_2a714_row8_col0" class="data row8 col0" >4:05 PM ET</td>
-      <td id="T_2a714_row8_col1" class="data row8 col1" >Globe Life Field</td>
-      <td id="T_2a714_row8_col2" class="data row8 col2" >Los Angeles Dodgers</td>
-      <td id="T_2a714_row8_col3" class="data row8 col3" >Texas Rangers</td>
+      <td id="T_6c61c_row8_col0" class="data row8 col0" >4:05 PM ET</td>
+      <td id="T_6c61c_row8_col1" class="data row8 col1" >Globe Life Field</td>
+      <td id="T_6c61c_row8_col2" class="data row8 col2" >Los Angeles Dodgers</td>
+      <td id="T_6c61c_row8_col3" class="data row8 col3" >Texas Rangers</td>
     </tr>
     <tr>
-      <td id="T_2a714_row9_col0" class="data row9 col0" >4:10 PM ET</td>
-      <td id="T_2a714_row9_col1" class="data row9 col1" >Fenway Park</td>
-      <td id="T_2a714_row9_col2" class="data row9 col2" >Chicago White Sox</td>
-      <td id="T_2a714_row9_col3" class="data row9 col3" >Boston Red Sox</td>
+      <td id="T_6c61c_row9_col0" class="data row9 col0" >4:10 PM ET</td>
+      <td id="T_6c61c_row9_col1" class="data row9 col1" >Fenway Park</td>
+      <td id="T_6c61c_row9_col2" class="data row9 col2" >Chicago White Sox</td>
+      <td id="T_6c61c_row9_col3" class="data row9 col3" >Boston Red Sox</td>
     </tr>
     <tr>
-      <td id="T_2a714_row10_col0" class="data row10 col0" >4:10 PM ET</td>
-      <td id="T_2a714_row10_col1" class="data row10 col1" >George M. Steinbrenner Field</td>
-      <td id="T_2a714_row10_col2" class="data row10 col2" >New York Yankees</td>
-      <td id="T_2a714_row10_col3" class="data row10 col3" >Tampa Bay Rays</td>
+      <td id="T_6c61c_row10_col0" class="data row10 col0" >4:10 PM ET</td>
+      <td id="T_6c61c_row10_col1" class="data row10 col1" >George M. Steinbrenner Field</td>
+      <td id="T_6c61c_row10_col2" class="data row10 col2" >New York Yankees</td>
+      <td id="T_6c61c_row10_col3" class="data row10 col3" >Tampa Bay Rays</td>
     </tr>
     <tr>
-      <td id="T_2a714_row11_col0" class="data row11 col0" >7:10 PM ET</td>
-      <td id="T_2a714_row11_col1" class="data row11 col1" >Daikin Park</td>
-      <td id="T_2a714_row11_col2" class="data row11 col2" >San Diego Padres</td>
-      <td id="T_2a714_row11_col3" class="data row11 col3" >Houston Astros</td>
+      <td id="T_6c61c_row11_col0" class="data row11 col0" >7:10 PM ET</td>
+      <td id="T_6c61c_row11_col1" class="data row11 col1" >Daikin Park</td>
+      <td id="T_6c61c_row11_col2" class="data row11 col2" >San Diego Padres</td>
+      <td id="T_6c61c_row11_col3" class="data row11 col3" >Houston Astros</td>
     </tr>
     <tr>
-      <td id="T_2a714_row12_col0" class="data row12 col0" >7:10 PM ET</td>
-      <td id="T_2a714_row12_col1" class="data row12 col1" >American Family Field</td>
-      <td id="T_2a714_row12_col2" class="data row12 col2" >Athletics</td>
-      <td id="T_2a714_row12_col3" class="data row12 col3" >Milwaukee Brewers</td>
+      <td id="T_6c61c_row12_col0" class="data row12 col0" >7:10 PM ET</td>
+      <td id="T_6c61c_row12_col1" class="data row12 col1" >American Family Field</td>
+      <td id="T_6c61c_row12_col2" class="data row12 col2" >Athletics</td>
+      <td id="T_6c61c_row12_col3" class="data row12 col3" >Milwaukee Brewers</td>
     </tr>
     <tr>
-      <td id="T_2a714_row13_col0" class="data row13 col0" >7:15 PM ET</td>
-      <td id="T_2a714_row13_col1" class="data row13 col1" >Truist Park</td>
-      <td id="T_2a714_row13_col2" class="data row13 col2" >Minnesota Twins</td>
-      <td id="T_2a714_row13_col3" class="data row13 col3" >Atlanta Braves</td>
+      <td id="T_6c61c_row13_col0" class="data row13 col0" >7:15 PM ET</td>
+      <td id="T_6c61c_row13_col1" class="data row13 col1" >Truist Park</td>
+      <td id="T_6c61c_row13_col2" class="data row13 col2" >Minnesota Twins</td>
+      <td id="T_6c61c_row13_col3" class="data row13 col3" >Atlanta Braves</td>
     </tr>
     <tr>
-      <td id="T_2a714_row14_col0" class="data row14 col0" >9:38 PM ET</td>
-      <td id="T_2a714_row14_col1" class="data row14 col1" >Angel Stadium</td>
-      <td id="T_2a714_row14_col2" class="data row14 col2" >San Francisco Giants</td>
-      <td id="T_2a714_row14_col3" class="data row14 col3" >Los Angeles Angels</td>
+      <td id="T_6c61c_row14_col0" class="data row14 col0" >9:38 PM ET</td>
+      <td id="T_6c61c_row14_col1" class="data row14 col1" >Angel Stadium</td>
+      <td id="T_6c61c_row14_col2" class="data row14 col2" >San Francisco Giants</td>
+      <td id="T_6c61c_row14_col3" class="data row14 col3" >Los Angeles Angels</td>
     </tr>
   </tbody>
 </table>
