--- a/slate.html
+++ b/slate.html
@@ -25,111 +25,218 @@ a:hover {text-decoration: underline;}
 <h1 style='text-align:center;'>The Slate</h1>
 <style type="text/css">
 </style>
-<table id="T_6c61c">
+<table id="T_a6eaf">
   <thead>
     <tr>
-      <th id="T_6c61c_level0_col0" class="col_heading level0 col0" >Game Time</th>
-      <th id="T_6c61c_level0_col1" class="col_heading level0 col1" >Venue</th>
-      <th id="T_6c61c_level0_col2" class="col_heading level0 col2" >Away Team</th>
-      <th id="T_6c61c_level0_col3" class="col_heading level0 col3" >Home Team</th>
+      <th id="T_a6eaf_level0_col0" class="col_heading level0 col0" >Game Time</th>
+      <th id="T_a6eaf_level0_col1" class="col_heading level0 col1" >Venue</th>
+      <th id="T_a6eaf_level0_col2" class="col_heading level0 col2" >Away Team</th>
+      <th id="T_a6eaf_level0_col3" class="col_heading level0 col3" >Home Team</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td id="T_6c61c_row0_col0" class="data row0 col0" >1:05 PM ET</td>
-      <td id="T_6c61c_row0_col1" class="data row0 col1" >Citizens Bank Park</td>
-      <td id="T_6c61c_row0_col2" class="data row0 col2" >Miami Marlins</td>
-      <td id="T_6c61c_row0_col3" class="data row0 col3" >Philadelphia Phillies</td>
+      <td id="T_a6eaf_row0_col0" class="data row0 col0" >1:05 PM ET</td>
+      <td id="T_a6eaf_row0_col1" class="data row0 col1" >Citizens Bank Park</td>
+      <td id="T_a6eaf_row0_col2" class="data row0 col2" ><img src='https://www.mlbstatic.com/team-logos/146.svg' style='height:30px;'> Miami Marlins</td>
+      <td id="T_a6eaf_row0_col3" class="data row0 col3" ><img src='https://www.mlbstatic.com/team-logos/143.svg' style='height:30px;'> Philadelphia Phillies</td>
     </tr>
     <tr>
-      <td id="T_6c61c_row1_col0" class="data row1 col0" >1:10 PM ET</td>
-      <td id="T_6c61c_row1_col1" class="data row1 col1" >Comerica Park</td>
-      <td id="T_6c61c_row1_col2" class="data row1 col2" >Kansas City Royals</td>
-      <td id="T_6c61c_row1_col3" class="data row1 col3" >Detroit Tigers</td>
+      <td id="T_a6eaf_row1_col0" class="data row1 col0" >1:10 PM ET</td>
+      <td id="T_a6eaf_row1_col1" class="data row1 col1" >Comerica Park</td>
+      <td id="T_a6eaf_row1_col2" class="data row1 col2" ><img src='https://www.mlbstatic.com/team-logos/118.svg' style='height:30px;'> Kansas City Royals</td>
+      <td id="T_a6eaf_row1_col3" class="data row1 col3" ><img src='https://www.mlbstatic.com/team-logos/116.svg' style='height:30px;'> Detroit Tigers</td>
     </tr>
     <tr>
-      <td id="T_6c61c_row2_col0" class="data row2 col0" >2:20 PM ET</td>
-      <td id="T_6c61c_row2_col1" class="data row2 col1" >Wrigley Field</td>
-      <td id="T_6c61c_row2_col2" class="data row2 col2" >Arizona Diamondbacks</td>
-      <td id="T_6c61c_row2_col3" class="data row2 col3" >Chicago Cubs</td>
+      <td id="T_a6eaf_row2_col0" class="data row2 col0" >2:20 PM ET</td>
+      <td id="T_a6eaf_row2_col1" class="data row2 col1" >Wrigley Field</td>
+      <td id="T_a6eaf_row2_col2" class="data row2 col2" ><img src='https://www.mlbstatic.com/team-logos/109.svg' style='height:30px;'> Arizona Diamondbacks</td>
+      <td id="T_a6eaf_row2_col3" class="data row2 col3" ><img src='https://www.mlbstatic.com/team-logos/112.svg' style='height:30px;'> Chicago Cubs</td>
     </tr>
     <tr>
-      <td id="T_6c61c_row3_col0" class="data row3 col0" >3:07 PM ET</td>
-      <td id="T_6c61c_row3_col1" class="data row3 col1" >Rogers Centre</td>
-      <td id="T_6c61c_row3_col2" class="data row3 col2" >Seattle Mariners</td>
-      <td id="T_6c61c_row3_col3" class="data row3 col3" >Toronto Blue Jays</td>
+      <td id="T_a6eaf_row3_col0" class="data row3 col0" >3:07 PM ET</td>
+      <td id="T_a6eaf_row3_col1" class="data row3 col1" >Rogers Centre</td>
+      <td id="T_a6eaf_row3_col2" class="data row3 col2" ><img src='https://www.mlbstatic.com/team-logos/136.svg' style='height:30px;'> Seattle Mariners</td>
+      <td id="T_a6eaf_row3_col3" class="data row3 col3" ><img src='https://www.mlbstatic.com/team-logos/141.svg' style='height:30px;'> Toronto Blue Jays</td>
     </tr>
     <tr>
-      <td id="T_6c61c_row4_col0" class="data row4 col0" >4:10 PM ET</td>
-      <td id="T_6c61c_row4_col1" class="data row4 col1" >Coors Field</td>
-      <td id="T_6c61c_row4_col2" class="data row4 col2" >Washington Nationals</td>
-      <td id="T_6c61c_row4_col3" class="data row4 col3" >Colorado Rockies</td>
+      <td id="T_a6eaf_row4_col0" class="data row4 col0" >4:10 PM ET</td>
+      <td id="T_a6eaf_row4_col1" class="data row4 col1" >Coors Field</td>
+      <td id="T_a6eaf_row4_col2" class="data row4 col2" ><img src='https://www.mlbstatic.com/team-logos/120.svg' style='height:30px;'> Washington Nationals</td>
+      <td id="T_a6eaf_row4_col3" class="data row4 col3" ><img src='https://www.mlbstatic.com/team-logos/115.svg' style='height:30px;'> Colorado Rockies</td>
     </tr>
     <tr>
-      <td id="T_6c61c_row5_col0" class="data row5 col0" >4:05 PM ET</td>
-      <td id="T_6c61c_row5_col1" class="data row5 col1" >Oriole Park at Camden Yards</td>
-      <td id="T_6c61c_row5_col2" class="data row5 col2" >Cincinnati Reds</td>
-      <td id="T_6c61c_row5_col3" class="data row5 col3" >Baltimore Orioles</td>
+      <td id="T_a6eaf_row5_col0" class="data row5 col0" >4:05 PM ET</td>
+      <td id="T_a6eaf_row5_col1" class="data row5 col1" >Oriole Park at Camden Yards</td>
+      <td id="T_a6eaf_row5_col2" class="data row5 col2" ><img src='https://www.mlbstatic.com/team-logos/113.svg' style='height:30px;'> Cincinnati Reds</td>
+      <td id="T_a6eaf_row5_col3" class="data row5 col3" ><img src='https://www.mlbstatic.com/team-logos/110.svg' style='height:30px;'> Baltimore Orioles</td>
     </tr>
     <tr>
-      <td id="T_6c61c_row6_col0" class="data row6 col0" >4:05 PM ET</td>
-      <td id="T_6c61c_row6_col1" class="data row6 col1" >PNC Park</td>
-      <td id="T_6c61c_row6_col2" class="data row6 col2" >Cleveland Guardians</td>
-      <td id="T_6c61c_row6_col3" class="data row6 col3" >Pittsburgh Pirates</td>
+      <td id="T_a6eaf_row6_col0" class="data row6 col0" >4:05 PM ET</td>
+      <td id="T_a6eaf_row6_col1" class="data row6 col1" >PNC Park</td>
+      <td id="T_a6eaf_row6_col2" class="data row6 col2" ><img src='https://www.mlbstatic.com/team-logos/114.svg' style='height:30px;'> Cleveland Guardians</td>
+      <td id="T_a6eaf_row6_col3" class="data row6 col3" ><img src='https://www.mlbstatic.com/team-logos/134.svg' style='height:30px;'> Pittsburgh Pirates</td>
     </tr>
     <tr>
-      <td id="T_6c61c_row7_col0" class="data row7 col0" >4:05 PM ET</td>
-      <td id="T_6c61c_row7_col1" class="data row7 col1" >Citi Field</td>
-      <td id="T_6c61c_row7_col2" class="data row7 col2" >St. Louis Cardinals</td>
-      <td id="T_6c61c_row7_col3" class="data row7 col3" >New York Mets</td>
+      <td id="T_a6eaf_row7_col0" class="data row7 col0" >4:05 PM ET</td>
+      <td id="T_a6eaf_row7_col1" class="data row7 col1" >Citi Field</td>
+      <td id="T_a6eaf_row7_col2" class="data row7 col2" ><img src='https://www.mlbstatic.com/team-logos/138.svg' style='height:30px;'> St. Louis Cardinals</td>
+      <td id="T_a6eaf_row7_col3" class="data row7 col3" ><img src='https://www.mlbstatic.com/team-logos/121.svg' style='height:30px;'> New York Mets</td>
     </tr>
     <tr>
-      <td id="T_6c61c_row8_col0" class="data row8 col0" >4:05 PM ET</td>
-      <td id="T_6c61c_row8_col1" class="data row8 col1" >Globe Life Field</td>
-      <td id="T_6c61c_row8_col2" class="data row8 col2" >Los Angeles Dodgers</td>
-      <td id="T_6c61c_row8_col3" class="data row8 col3" >Texas Rangers</td>
+      <td id="T_a6eaf_row8_col0" class="data row8 col0" >4:05 PM ET</td>
+      <td id="T_a6eaf_row8_col1" class="data row8 col1" >Globe Life Field</td>
+      <td id="T_a6eaf_row8_col2" class="data row8 col2" ><img src='https://www.mlbstatic.com/team-logos/119.svg' style='height:30px;'> Los Angeles Dodgers</td>
+      <td id="T_a6eaf_row8_col3" class="data row8 col3" ><img src='https://www.mlbstatic.com/team-logos/140.svg' style='height:30px;'> Texas Rangers</td>
     </tr>
     <tr>
-      <td id="T_6c61c_row9_col0" class="data row9 col0" >4:10 PM ET</td>
-      <td id="T_6c61c_row9_col1" class="data row9 col1" >Fenway Park</td>
-      <td id="T_6c61c_row9_col2" class="data row9 col2" >Chicago White Sox</td>
-      <td id="T_6c61c_row9_col3" class="data row9 col3" >Boston Red Sox</td>
+      <td id="T_a6eaf_row9_col0" class="data row9 col0" >4:10 PM ET</td>
+      <td id="T_a6eaf_row9_col1" class="data row9 col1" >Fenway Park</td>
+      <td id="T_a6eaf_row9_col2" class="data row9 col2" ><img src='https://www.mlbstatic.com/team-logos/145.svg' style='height:30px;'> Chicago White Sox</td>
+      <td id="T_a6eaf_row9_col3" class="data row9 col3" ><img src='https://www.mlbstatic.com/team-logos/111.svg' style='height:30px;'> Boston Red Sox</td>
     </tr>
     <tr>
-      <td id="T_6c61c_row10_col0" class="data row10 col0" >4:10 PM ET</td>
-      <td id="T_6c61c_row10_col1" class="data row10 col1" >George M. Steinbrenner Field</td>
-      <td id="T_6c61c_row10_col2" class="data row10 col2" >New York Yankees</td>
-      <td id="T_6c61c_row10_col3" class="data row10 col3" >Tampa Bay Rays</td>
+      <td id="T_a6eaf_row10_col0" class="data row10 col0" >4:10 PM ET</td>
+      <td id="T_a6eaf_row10_col1" class="data row10 col1" >George M. Steinbrenner Field</td>
+      <td id="T_a6eaf_row10_col2" class="data row10 col2" ><img src='https://www.mlbstatic.com/team-logos/147.svg' style='height:30px;'> New York Yankees</td>
+      <td id="T_a6eaf_row10_col3" class="data row10 col3" ><img src='https://www.mlbstatic.com/team-logos/139.svg' style='height:30px;'> Tampa Bay Rays</td>
     </tr>
     <tr>
-      <td id="T_6c61c_row11_col0" class="data row11 col0" >7:10 PM ET</td>
-      <td id="T_6c61c_row11_col1" class="data row11 col1" >Daikin Park</td>
-      <td id="T_6c61c_row11_col2" class="data row11 col2" >San Diego Padres</td>
-      <td id="T_6c61c_row11_col3" class="data row11 col3" >Houston Astros</td>
+      <td id="T_a6eaf_row11_col0" class="data row11 col0" >7:10 PM ET</td>
+      <td id="T_a6eaf_row11_col1" class="data row11 col1" >Daikin Park</td>
+      <td id="T_a6eaf_row11_col2" class="data row11 col2" ><img src='https://www.mlbstatic.com/team-logos/135.svg' style='height:30px;'> San Diego Padres</td>
+      <td id="T_a6eaf_row11_col3" class="data row11 col3" ><img src='https://www.mlbstatic.com/team-logos/117.svg' style='height:30px;'> Houston Astros</td>
     </tr>
     <tr>
-      <td id="T_6c61c_row12_col0" class="data row12 col0" >7:10 PM ET</td>
-      <td id="T_6c61c_row12_col1" class="data row12 col1" >American Family Field</td>
-      <td id="T_6c61c_row12_col2" class="data row12 col2" >Athletics</td>
-      <td id="T_6c61c_row12_col3" class="data row12 col3" >Milwaukee Brewers</td>
+      <td id="T_a6eaf_row12_col0" class="data row12 col0" >7:10 PM ET</td>
+      <td id="T_a6eaf_row12_col1" class="data row12 col1" >American Family Field</td>
+      <td id="T_a6eaf_row12_col2" class="data row12 col2" ><img src='https://www.mlbstatic.com/team-logos/133.svg' style='height:30px;'> Oakland Athletics</td>
+      <td id="T_a6eaf_row12_col3" class="data row12 col3" ><img src='https://www.mlbstatic.com/team-logos/158.svg' style='height:30px;'> Milwaukee Brewers</td>
     </tr>
     <tr>
-      <td id="T_6c61c_row13_col0" class="data row13 col0" >7:15 PM ET</td>
-      <td id="T_6c61c_row13_col1" class="data row13 col1" >Truist Park</td>
-      <td id="T_6c61c_row13_col2" class="data row13 col2" >Minnesota Twins</td>
-      <td id="T_6c61c_row13_col3" class="data row13 col3" >Atlanta Braves</td>
+      <td id="T_a6eaf_row13_col0" class="data row13 col0" >7:15 PM ET</td>
+      <td id="T_a6eaf_row13_col1" class="data row13 col1" >Truist Park</td>
+      <td id="T_a6eaf_row13_col2" class="data row13 col2" ><img src='https://www.mlbstatic.com/team-logos/142.svg' style='height:30px;'> Minnesota Twins</td>
+      <td id="T_a6eaf_row13_col3" class="data row13 col3" ><img src='https://www.mlbstatic.com/team-logos/144.svg' style='height:30px;'> Atlanta Braves</td>
     </tr>
     <tr>
-      <td id="T_6c61c_row14_col0" class="data row14 col0" >9:38 PM ET</td>
-      <td id="T_6c61c_row14_col1" class="data row14 col1" >Angel Stadium</td>
-      <td id="T_6c61c_row14_col2" class="data row14 col2" >San Francisco Giants</td>
-      <td id="T_6c61c_row14_col3" class="data row14 col3" >Los Angeles Angels</td>
+      <td id="T_a6eaf_row14_col0" class="data row14 col0" >9:38 PM ET</td>
+      <td id="T_a6eaf_row14_col1" class="data row14 col1" >Angel Stadium</td>
+      <td id="T_a6eaf_row14_col2" class="data row14 col2" ><img src='https://www.mlbstatic.com/team-logos/137.svg' style='height:30px;'> San Francisco Giants</td>
+      <td id="T_a6eaf_row14_col3" class="data row14 col3" ><img src='https://www.mlbstatic.com/team-logos/108.svg' style='height:30px;'> Los Angeles Angels</td>
     </tr>
   </tbody>
 </table>
 
 
-<h2 style='text-align:center; margin-top: 50px;'>Probable Pitchers & Batting Lineups</h2>
+<h2 style='text-align:center; margin-top: 50px;'>Probable Pitchers</h2>
+<style type="text/css">
+</style>
+<table id="T_54bcf">
+  <thead>
+    <tr>
+      <th id="T_54bcf_level0_col0" class="col_heading level0 col0" >Matchup</th>
+      <th id="T_54bcf_level0_col1" class="col_heading level0 col1" >Away Pitcher</th>
+      <th id="T_54bcf_level0_col2" class="col_heading level0 col2" >Home Pitcher</th>
+      <th id="T_54bcf_level0_col3" class="col_heading level0 col3" >Game Time</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td id="T_54bcf_row0_col0" class="data row0 col0" >Miami Marlins vs Philadelphia Phillies</td>
+      <td id="T_54bcf_row0_col1" class="data row0 col1" >Cal Quantrill (R)</td>
+      <td id="T_54bcf_row0_col2" class="data row0 col2" >Taijuan Walker (R)</td>
+      <td id="T_54bcf_row0_col3" class="data row0 col3" >1:05 PM ET</td>
+    </tr>
+    <tr>
+      <td id="T_54bcf_row1_col0" class="data row1 col0" >Kansas City Royals vs Detroit Tigers</td>
+      <td id="T_54bcf_row1_col1" class="data row1 col1" >Seth Lugo (R)</td>
+      <td id="T_54bcf_row1_col2" class="data row1 col2" >Casey Mize (R)</td>
+      <td id="T_54bcf_row1_col3" class="data row1 col3" >1:10 PM ET</td>
+    </tr>
+    <tr>
+      <td id="T_54bcf_row2_col0" class="data row2 col0" >Arizona Diamondbacks vs Chicago Cubs</td>
+      <td id="T_54bcf_row2_col1" class="data row2 col1" >Zac Gallen (R)</td>
+      <td id="T_54bcf_row2_col2" class="data row2 col2" >Ben Brown (R)</td>
+      <td id="T_54bcf_row2_col3" class="data row2 col3" >2:20 PM ET</td>
+    </tr>
+    <tr>
+      <td id="T_54bcf_row3_col0" class="data row3 col0" >Seattle Mariners vs Toronto Blue Jays</td>
+      <td id="T_54bcf_row3_col1" class="data row3 col1" >Logan Gilbert (R)</td>
+      <td id="T_54bcf_row3_col2" class="data row3 col2" >Jose Berrios (R)</td>
+      <td id="T_54bcf_row3_col3" class="data row3 col3" >3:07 PM ET</td>
+    </tr>
+    <tr>
+      <td id="T_54bcf_row4_col0" class="data row4 col0" >Washington Nationals vs Colorado Rockies</td>
+      <td id="T_54bcf_row4_col1" class="data row4 col1" >MacKenzie Gore (L)</td>
+      <td id="T_54bcf_row4_col2" class="data row4 col2" >Chase Dollander (R)</td>
+      <td id="T_54bcf_row4_col3" class="data row4 col3" >4:10 PM ET</td>
+    </tr>
+    <tr>
+      <td id="T_54bcf_row5_col0" class="data row5 col0" >Cincinnati Reds vs Baltimore Orioles</td>
+      <td id="T_54bcf_row5_col1" class="data row5 col1" >Hunter Greene (R)</td>
+      <td id="T_54bcf_row5_col2" class="data row5 col2" >Brandon Young (R)</td>
+      <td id="T_54bcf_row5_col3" class="data row5 col3" >4:05 PM ET</td>
+    </tr>
+    <tr>
+      <td id="T_54bcf_row6_col0" class="data row6 col0" >Cleveland Guardians vs Pittsburgh Pirates</td>
+      <td id="T_54bcf_row6_col1" class="data row6 col1" >Ben Lively (R)</td>
+      <td id="T_54bcf_row6_col2" class="data row6 col2" >Paul Skenes (R)</td>
+      <td id="T_54bcf_row6_col3" class="data row6 col3" >4:05 PM ET</td>
+    </tr>
+    <tr>
+      <td id="T_54bcf_row7_col0" class="data row7 col0" >St. Louis Cardinals vs New York Mets</td>
+      <td id="T_54bcf_row7_col1" class="data row7 col1" >Matthew Liberatore (L)</td>
+      <td id="T_54bcf_row7_col2" class="data row7 col2" >Kodai Senga (R)</td>
+      <td id="T_54bcf_row7_col3" class="data row7 col3" >4:05 PM ET</td>
+    </tr>
+    <tr>
+      <td id="T_54bcf_row8_col0" class="data row8 col0" >Los Angeles Dodgers vs Texas Rangers</td>
+      <td id="T_54bcf_row8_col1" class="data row8 col1" >Roki Sasaki (R)</td>
+      <td id="T_54bcf_row8_col2" class="data row8 col2" >Nathan Eovaldi (R)</td>
+      <td id="T_54bcf_row8_col3" class="data row8 col3" >4:05 PM ET</td>
+    </tr>
+    <tr>
+      <td id="T_54bcf_row9_col0" class="data row9 col0" >Chicago White Sox vs Boston Red Sox</td>
+      <td id="T_54bcf_row9_col1" class="data row9 col1" >Shane Smith (R)</td>
+      <td id="T_54bcf_row9_col2" class="data row9 col2" >Garrett Crochet (L)</td>
+      <td id="T_54bcf_row9_col3" class="data row9 col3" >4:10 PM ET</td>
+    </tr>
+    <tr>
+      <td id="T_54bcf_row10_col0" class="data row10 col0" >New York Yankees vs Tampa Bay Rays</td>
+      <td id="T_54bcf_row10_col1" class="data row10 col1" >Carlos Carrasco (R)</td>
+      <td id="T_54bcf_row10_col2" class="data row10 col2" >Shane Baz (R)</td>
+      <td id="T_54bcf_row10_col3" class="data row10 col3" >4:10 PM ET</td>
+    </tr>
+    <tr>
+      <td id="T_54bcf_row11_col0" class="data row11 col0" >San Diego Padres vs Houston Astros</td>
+      <td id="T_54bcf_row11_col1" class="data row11 col1" >Michael King (R)</td>
+      <td id="T_54bcf_row11_col2" class="data row11 col2" >Hayden Wesneski (R)</td>
+      <td id="T_54bcf_row11_col3" class="data row11 col3" >7:10 PM ET</td>
+    </tr>
+    <tr>
+      <td id="T_54bcf_row12_col0" class="data row12 col0" >Oakland Athletics vs Milwaukee Brewers</td>
+      <td id="T_54bcf_row12_col1" class="data row12 col1" >Luis Severino (R)</td>
+      <td id="T_54bcf_row12_col2" class="data row12 col2" >Chad Patrick (R)</td>
+      <td id="T_54bcf_row12_col3" class="data row12 col3" >7:10 PM ET</td>
+    </tr>
+    <tr>
+      <td id="T_54bcf_row13_col0" class="data row13 col0" >Minnesota Twins vs Atlanta Braves</td>
+      <td id="T_54bcf_row13_col1" class="data row13 col1" >Simeon Woods Richardson (R)</td>
+      <td id="T_54bcf_row13_col2" class="data row13 col2" >Chris Sale (L)</td>
+      <td id="T_54bcf_row13_col3" class="data row13 col3" >7:15 PM ET</td>
+    </tr>
+    <tr>
+      <td id="T_54bcf_row14_col0" class="data row14 col0" >San Francisco Giants vs Los Angeles Angels</td>
+      <td id="T_54bcf_row14_col1" class="data row14 col1" >Landen Roupp (R)</td>
+      <td id="T_54bcf_row14_col2" class="data row14 col2" >Kyle Hendricks (R)</td>
+      <td id="T_54bcf_row14_col3" class="data row14 col3" >9:38 PM ET</td>
+    </tr>
+  </tbody>
+</table>
+
+
+<h2 style='text-align:center; margin-top: 50px;'>Batting Lineups</h2>
 <p class='blink' style='text-align:center; font-size: 1.5em; color: #999;'>Coming Soon...</p>
 
 <div style='text-align:center;margin-top:40px;font-size:0.9em;color:#6c757d;'>
