--- a/top_props.html
+++ b/top_props.html
@@ -67,11 +67,11 @@
 
 <!-- Navigation -->
 <nav>
-    <a href="index.html">Matchups</a>
-    <a href="nrfi.html">NRFI Predictions</a>
-    <a href="pitchers.html">Pitchers</a>
-    <a href="slate.html">Today's Slate</a>
-    <a href="top_props.html">Daily Top Props</a>
+    <a href="index.html">Matchups</a> |
+    <a href="nrfi.html">NRFI Predictions</a> |
+    <a href="pitchers.html">Pitchers</a> |
+    <a href="slate.html">Today's Slate</a> |
+    <a href="top_props.html">Daily Top Props</a> |
     <a href="about.html">About</a>
 </nav>
 
