--- a/about.html
+++ b/about.html
@@ -72,10 +72,11 @@
     <img src='https://www.mlbstatic.com/team-logos/league-on-dark/1.svg' alt='MLB Logo' style='height: 60px;'>
 </div>
 <nav>
-    <a href="index.html">Matchups</a>
-    <a href="nrfi.html">NRFI Predictions</a>
-    <a href="pitchers.html">Pitchers</a>
-    <a href="slate.html">Today's Slate</a>
+    <a href="index.html">Matchups</a> |
+    <a href="nrfi.html">NRFI Predictions</a> |
+    <a href="pitchers.html">Pitchers</a> |
+    <a href="slate.html">Today's Slate</a> |
+    <a href="top_props.html">Top Props</a> |
     <a href="about.html">About</a>
 </nav>
 <h1>ABOUT</h1>
