🔄 Auto update HTMLs

--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
     <a href="nrfi.html">NRFI Predictions</a> |
     <a href="pitchers.html">Pitchers</a> |
     <a href="slate.html">Today's Slate</a> |
-    <a href="top_props.html">Top Props</a> |
+    <a href="top_props.html">Daily Top Props</a> |
     <a href="about.html">About</a>
 </nav>
 <h1>ABOUT</h1>
