🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Chris Bassitt over 7.4 Ks</h3>
-    <p>Chris Bassitt draws Athletics with a 24.8% K rate — projected for 7.4 punchouts.</p>
+    <h3>Dylan Cease over 7.1 Ks</h3>
+    <p>Dylan Cease draws Pirates with a 22.7% K rate — projected for 7.1 punchouts.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Corbin Carroll to hit a HR</h3>
-    <p>Corbin Carroll has already gone deep 2 times and owns a 66.7 hard-hit rate against Jake Irvin.</p>
+    <h3>Rafael Devers to hit a HR</h3>
+    <p>Rafael Devers has already gone deep 2 times and owns a 60.0 hard-hit rate against Spencer Schwellenbach.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Jose Ramirez to record a hit</h3>
-    <p>On a 19-game hit streak. Seeing the ball well lately.</p>
+    <h3>Maikel Garcia to record a hit</h3>
+    <p>On a 14-game hit streak. Seeing the ball well lately.</p>
 </div>
 
 <div class="prop-card">
-    <h3>NRFI: losangelesangels vs clevelandguardians</h3>
-    <p>Luis L. Ortiz and Jose Soriano open games with authority, backing a high NRFI probability here.</p>
+    <h3>NRFI: milwaukeebrewers vs philadelphiaphillies</h3>
+    <p>Jesus Luzardo and Chad Patrick open games with authority, backing a high NRFI probability here.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Milwaukee Brewers vs Philadelphia Phillies — total runs over</span></h3>
-    <p><span class="blurred">Citizens Bank Park expected to pop — 7.0% chance of fireworks.</span></p>
+    <h3><span class="blurred">Minnesota Twins vs Seattle Mariners — total runs over</span></h3>
+    <p><span class="blurred">T-Mobile Park expected to pop — 99.0% chance of fireworks.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
