🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -34,27 +34,27 @@
 
 <div class="prop-card">
     <h3>Dylan Cease over 7.1 Ks</h3>
-    <p>Dylan Cease draws Pirates with a 22.7% K rate — projected for 7.1 punchouts.</p>
+    <p>Great K% matchup vs Pirates — projected for 7.1 strikeouts.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Rafael Devers to hit a HR</h3>
-    <p>Rafael Devers has already gone deep 2 times and owns a 60.0 hard-hit rate against Spencer Schwellenbach.</p>
+    <h3>Rafael Devers HR prop</h3>
+    <p>Power bat with 2 HRs and strong contact vs Spencer Schwellenbach.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Maikel Garcia to record a hit</h3>
-    <p>On a 14-game hit streak. Seeing the ball well lately.</p>
+    <h3>Maikel Garcia knocks one?</h3>
+    <p>Riding a 14-game hit streak.</p>
 </div>
 
 <div class="prop-card">
-    <h3>NRFI: milwaukeebrewers vs philadelphiaphillies</h3>
-    <p>Jesus Luzardo and Chad Patrick open games with authority, backing a high NRFI probability here.</p>
+    <h3>No Run 1st Inning — milwaukeebrewers vs philadelphiaphillies</h3>
+    <p>Two quick starters: Jesus Luzardo and Chad Patrick.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Minnesota Twins vs Seattle Mariners — total runs over</span></h3>
-    <p><span class="blurred">T-Mobile Park expected to pop — 99.0% chance of fireworks.</span></p>
+    <h3><span class="blurred">Minnesota Twins vs Seattle Mariners run fest?</span></h3>
+    <p><span class="blurred">99.0% model chance of a high-scoring affair at T-Mobile Park.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
