🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Garrett Crochet is projected to whiff 7.0</h3>
-    <p>Great K% matchup vs Braves — projected for 7.0 strikeouts.</p>
+    <h3>Joe Ryan racks up Ks today</h3>
+    <p>Joe Ryan faces Athletics, who strike out 24.8% of the time.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Josh Lowe HR prop</h3>
-    <p>Josh Lowe has hit 1 already and owns a 66.7% hard-hit rate vs Hunter Brown.</p>
+    <h3>Kerry Carpenter has HR potential</h3>
+    <p>Power bat with 2 HRs and strong contact vs Jonathan Cannon.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Brandon Lowe to record a hit</h3>
-    <p>🔥 13 straight games with a hit.</p>
+    <h3>Patrick Bailey to record a hit</h3>
+    <p>Batting 1.0 vs Stephen Kolek — strong contact spot.</p>
 </div>
 
 <div class="prop-card">
-    <h3>NRFI: milwaukeebrewers vs philadelphiaphillies</h3>
-    <p>Two quick starters: Ranger Suarez and Jose Quintana.</p>
+    <h3>NRFI: coloradorockies vs miamimarlins</h3>
+    <p>Low 1st-inning scoring profile with Max Meyer and German Marquez.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Oakland Athletics vs Toronto Blue Jays — total runs over</span></h3>
-    <p><span class="blurred">All signs point to a shootout at Rogers Centre (0.0%).</span></p>
+    <h3><span class="blurred">Colorado Rockies vs Miami Marlins run fest?</span></h3>
+    <p><span class="blurred">loanDepot park is a run-friendly park — nan% chance of fireworks.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
