🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Joe Ryan over 8.7 Ks</h3>
-    <p>Great K% matchup vs Athletics — projected for 8.7 strikeouts.</p>
+    <h3>Pablo Lopez over 7.8 Ks</h3>
+    <p>Pablo Lopez is in a prime strikeout spot today.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Kerry Carpenter HR prop</h3>
-    <p>62.5% hard-hit rate vs Jonathan Cannon — eyes on the fences.</p>
+    <h3>Rafael Devers has HR potential</h3>
+    <p>100.0% hard-hit rate vs Yusei Kikuchi — eyes on the fences.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Patrick Bailey to record a hit</h3>
-    <p>1.0 AVG vs Stephen Kolek makes this a clean look.</p>
+    <h3>Carlos Santana knocks one?</h3>
+    <p>Riding a 10-game hit streak.</p>
 </div>
 
 <div class="prop-card">
-    <h3>No Run 1st Inning — coloradorockies vs miamimarlins</h3>
-    <p>Max Meyer and German Marquez tend to shut it down early — NRFI value here.</p>
+    <h3>philadelphiaphillies vs torontobluejays NRFI Pick</h3>
+    <p>Two quick starters: Bowden Francis and Cristopher Sanchez.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Colorado Rockies vs Miami Marlins — total runs over</span></h3>
-    <p><span class="blurred">All signs point to a shootout at loanDepot park (nan%).</span></p>
+    <h3><span class="blurred">Houston Astros vs Pittsburgh Pirates run fest?</span></h3>
+    <p><span class="blurred">All signs point to a shootout at PNC Park (nan%).</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
