🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,17 +33,17 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Pablo Lopez over 7.8 Ks</h3>
+    <h3>Pablo Lopez is projected to whiff 7.8</h3>
     <p>Pablo Lopez is in a prime strikeout spot today.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Rafael Devers has HR potential</h3>
-    <p>100.0% hard-hit rate vs Yusei Kikuchi — eyes on the fences.</p>
+    <h3>Rafael Devers to hit a HR</h3>
+    <p>Rafael Devers has hit 1 already and owns a 100.0% hard-hit rate vs Yusei Kikuchi.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Carlos Santana knocks one?</h3>
+    <h3>Carlos Santana Hit Prop</h3>
     <p>Riding a 10-game hit streak.</p>
 </div>
 
@@ -54,7 +54,7 @@
 
 <div class="prop-card">
     <h3><span class="blurred">Houston Astros vs Pittsburgh Pirates run fest?</span></h3>
-    <p><span class="blurred">All signs point to a shootout at PNC Park (nan%).</span></p>
+    <p><span class="blurred">PNC Park is a run-friendly park — nan% chance of fireworks.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
