🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Pablo Lopez is projected to whiff 7.8</h3>
-    <p>Pablo Lopez is in a prime strikeout spot today.</p>
+    <h3>Zebby Matthews racks up Ks today</h3>
+    <p>Zebby Matthews is in a prime strikeout spot today.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Rafael Devers to hit a HR</h3>
-    <p>Rafael Devers has hit 1 already and owns a 100.0% hard-hit rate vs Yusei Kikuchi.</p>
+    <h3>Kyle Manzardo to hit a HR</h3>
+    <p>Power bat with 2 HRs and strong contact vs Clarke Schmidt.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Carlos Santana Hit Prop</h3>
-    <p>Riding a 10-game hit streak.</p>
+    <h3>Carlos Santana to record a hit</h3>
+    <p>Riding a 11-game hit streak.</p>
 </div>
 
 <div class="prop-card">
-    <h3>philadelphiaphillies vs torontobluejays NRFI Pick</h3>
-    <p>Two quick starters: Bowden Francis and Cristopher Sanchez.</p>
+    <h3>NRFI: philadelphiaphillies vs torontobluejays</h3>
+    <p>Two quick starters: Jose Berrios and Mick Abel.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Houston Astros vs Pittsburgh Pirates run fest?</span></h3>
-    <p><span class="blurred">PNC Park is a run-friendly park — nan% chance of fireworks.</span></p>
+    <h3><span class="blurred">Colorado Rockies vs Miami Marlins — total runs over</span></h3>
+    <p><span class="blurred">All signs point to a shootout at loanDepot park (nan%).</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
