🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Cole Ragans over 6.6 Ks</h3>
-    <p>Cole Ragans is in a prime strikeout spot today.</p>
+    <h3>Tarik Skubal over 6.9 Ks</h3>
+    <p>Great K% matchup vs Cubs — projected for 6.9 strikeouts.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Eugenio Suarez HR prop</h3>
-    <p>Eugenio Suarez has hit 3 already and owns a 75.0% hard-hit rate vs Grant Holmes.</p>
+    <h3>Cody Bellinger HR prop</h3>
+    <p>Power bat with 1 HRs and strong contact vs Walker Buehler.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Alex Verdugo knocks one?</h3>
-    <p>Batting 1.0 vs Brandon Pfaadt — strong contact spot.</p>
+    <h3>Carlos Santana to record a hit</h3>
+    <p>13-game streak — bat is staying hot.</p>
 </div>
 
 <div class="prop-card">
-    <h3>philadelphiaphillies vs torontobluejays NRFI Pick</h3>
-    <p>Chris Bassitt and Jesus Luzardo tend to shut it down early — NRFI value here.</p>
+    <h3>No Run 1st Inning — sandiegopadres vs milwaukeebrewers</h3>
+    <p>Chad Patrick and Randy Vasquez tend to shut it down early — NRFI value here.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Arizona Diamondbacks vs Atlanta Braves run fest?</span></h3>
-    <p><span class="blurred">Truist Park is a run-friendly park — nan% chance of fireworks.</span></p>
+    <h3><span class="blurred">Miami Marlins vs Tampa Bay Rays run fest?</span></h3>
+    <p><span class="blurred">All signs point to a shootout at George M. Steinbrenner Field (nan%).</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
