🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Tarik Skubal racks up Ks today</h3>
-    <p>Tarik Skubal faces Cubs, who strike out 20.3% of the time.</p>
+    <h3>Ranger Suarez over 7.2 Ks</h3>
+    <p>Ranger Suarez is in a prime strikeout spot today.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Cody Bellinger HR prop</h3>
-    <p>Cody Bellinger has hit 1 already and owns a 80.0% hard-hit rate vs Walker Buehler.</p>
+    <h3>Willy Adames has HR potential</h3>
+    <p>Willy Adames has hit 2 already and owns a 60.0% hard-hit rate vs Bryce Elder.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Salvador Perez knocks one?</h3>
-    <p>1.0 AVG vs Davis Martin makes this a clean look.</p>
+    <h3>Jeremy Pena Hit Prop</h3>
+    <p>Riding a 12-game hit streak.</p>
 </div>
 
 <div class="prop-card">
-    <h3>No Run 1st Inning — sandiegopadres vs milwaukeebrewers</h3>
-    <p>Chad Patrick and Randy Vasquez tend to shut it down early — NRFI value here.</p>
+    <h3>No Run 1st Inning — philadelphiaphillies vs pittsburghpirates</h3>
+    <p>Two quick starters: Andrew Heaney and Ranger Suarez.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Miami Marlins vs Tampa Bay Rays — total runs over</span></h3>
-    <p><span class="blurred">All signs point to a shootout at George M. Steinbrenner Field (nan%).</span></p>
+    <h3><span class="blurred">Chicago Cubs vs Detroit Tigers run fest?</span></h3>
+    <p><span class="blurred">Comerica Park is a run-friendly park — nan% chance of fireworks.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
