🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Ranger Suarez over 7.2 Ks</h3>
-    <p>Ranger Suarez is in a prime strikeout spot today.</p>
+    <h3>Paul Skenes over 7.0 Ks</h3>
+    <p>Great K% matchup vs Phillies — projected for 7.0 strikeouts.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Willy Adames has HR potential</h3>
-    <p>Willy Adames has hit 2 already and owns a 60.0% hard-hit rate vs Bryce Elder.</p>
+    <h3>Taylor Ward HR prop</h3>
+    <p>Power bat with 1 HRs and strong contact vs George Kirby.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Jeremy Pena Hit Prop</h3>
-    <p>Riding a 12-game hit streak.</p>
+    <h3>Jeremy Pena knocks one?</h3>
+    <p>12-game streak — bat is staying hot.</p>
 </div>
 
 <div class="prop-card">
-    <h3>No Run 1st Inning — philadelphiaphillies vs pittsburghpirates</h3>
-    <p>Two quick starters: Andrew Heaney and Ranger Suarez.</p>
+    <h3>NRFI: philadelphiaphillies vs pittsburghpirates</h3>
+    <p>Low 1st-inning scoring profile with Paul Skenes and Cristopher Sanchez.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Chicago Cubs vs Detroit Tigers run fest?</span></h3>
-    <p><span class="blurred">Comerica Park is a run-friendly park — nan% chance of fireworks.</span></p>
+    <h3><span class="blurred">Miami Marlins vs Tampa Bay Rays run fest?</span></h3>
+    <p><span class="blurred">nan% model chance of a high-scoring affair at George M. Steinbrenner Field.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
