🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Paul Skenes racks up Ks today</h3>
-    <p>Great K% matchup vs Phillies — projected for 7.0 strikeouts.</p>
+    <h3>Zack Wheeler is projected to whiff 6.6</h3>
+    <p>Zack Wheeler faces Cubs, who strike out 21.4% of the time.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Taylor Ward has HR potential</h3>
-    <p>Power bat with 1 HRs and strong contact vs George Kirby.</p>
+    <h3>Will Benson to hit a HR</h3>
+    <p>100.0% hard-hit rate vs Luis L. Ortiz — eyes on the fences.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Jonathan India knocks one?</h3>
-    <p>Batting 1.0 vs Mike Vasil — strong contact spot.</p>
+    <h3>Lourdes Gurriel knocks one?</h3>
+    <p>Riding a 13-game hit streak.</p>
 </div>
 
 <div class="prop-card">
-    <h3>philadelphiaphillies vs pittsburghpirates NRFI Pick</h3>
-    <p>Paul Skenes and Cristopher Sanchez tend to shut it down early — NRFI value here.</p>
+    <h3>No Run 1st Inning — miamimarlins vs pittsburghpirates</h3>
+    <p>Mike Burrows and Eury Perez tend to shut it down early — NRFI value here.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Miami Marlins vs Tampa Bay Rays — total runs over</span></h3>
-    <p><span class="blurred">George M. Steinbrenner Field is a run-friendly park — nan% chance of fireworks.</span></p>
+    <h3><span class="blurred">Cincinnati Reds vs Cleveland Guardians — total runs over</span></h3>
+    <p><span class="blurred">nan% model chance of a high-scoring affair at Progressive Field.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
