🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Zack Wheeler is projected to whiff 6.6</h3>
-    <p>Zack Wheeler faces Cubs, who strike out 21.4% of the time.</p>
+    <h3>Dylan Cease is projected to whiff 5.7</h3>
+    <p>Great K% matchup vs Dodgers — projected for 5.7 strikeouts.</p>
 </div>
 
 <div class="prop-card">
     <h3>Will Benson to hit a HR</h3>
-    <p>100.0% hard-hit rate vs Luis L. Ortiz — eyes on the fences.</p>
+    <p>57.1% hard-hit rate vs Slade Cecconi — eyes on the fences.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Lourdes Gurriel knocks one?</h3>
-    <p>Riding a 13-game hit streak.</p>
+    <h3>Lourdes Gurriel to record a hit</h3>
+    <p>🔥 14 straight games with a hit.</p>
 </div>
 
 <div class="prop-card">
-    <h3>No Run 1st Inning — miamimarlins vs pittsburghpirates</h3>
-    <p>Mike Burrows and Eury Perez tend to shut it down early — NRFI value here.</p>
+    <h3>No Run 1st Inning — oaklandathletics vs losangelesangels</h3>
+    <p>Two quick starters: Jose Soriano and Mitch Spence.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Cincinnati Reds vs Cleveland Guardians — total runs over</span></h3>
-    <p><span class="blurred">nan% model chance of a high-scoring affair at Progressive Field.</span></p>
+    <h3><span class="blurred">Detroit Tigers vs Baltimore Orioles run fest?</span></h3>
+    <p><span class="blurred">All signs point to a shootout at Oriole Park at Camden Yards (nan%).</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
