🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Dylan Cease is projected to whiff 5.7</h3>
-    <p>Great K% matchup vs Dodgers — projected for 5.7 strikeouts.</p>
+    <h3>Robbie Ray is projected to whiff 6.2</h3>
+    <p>Great K% matchup vs Rockies — projected for 6.2 strikeouts.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Will Benson to hit a HR</h3>
-    <p>57.1% hard-hit rate vs Slade Cecconi — eyes on the fences.</p>
+    <h3>Logan O'Hoppe to hit a HR</h3>
+    <p>Logan O'Hoppe has hit 2 already and owns a 80.0% hard-hit rate vs JP Sears.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Lourdes Gurriel to record a hit</h3>
-    <p>🔥 14 straight games with a hit.</p>
+    <h3>Jonathan Aranda to record a hit</h3>
+    <p>1.0 AVG vs Walker Buehler makes this a clean look.</p>
 </div>
 
 <div class="prop-card">
-    <h3>No Run 1st Inning — oaklandathletics vs losangelesangels</h3>
-    <p>Two quick starters: Jose Soriano and Mitch Spence.</p>
+    <h3>chicagocubs vs philadelphiaphillies NRFI Pick</h3>
+    <p>Two quick starters: Jesus Luzardo and Ben Brown.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Detroit Tigers vs Baltimore Orioles run fest?</span></h3>
-    <p><span class="blurred">All signs point to a shootout at Oriole Park at Camden Yards (nan%).</span></p>
+    <h3><span class="blurred">Chicago Cubs@Philadelphia Phillies could explode offensively</span></h3>
+    <p><span class="blurred">77.0% model chance of a high-scoring affair at Citizens Bank Park.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
