🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Robbie Ray is projected to whiff 6.2</h3>
-    <p>Great K% matchup vs Rockies — projected for 6.2 strikeouts.</p>
+    <h3>Tarik Skubal is projected to whiff 8.4</h3>
+    <p>Great K% matchup vs Orioles — projected for 8.4 strikeouts.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Logan O'Hoppe to hit a HR</h3>
-    <p>Logan O'Hoppe has hit 2 already and owns a 80.0% hard-hit rate vs JP Sears.</p>
+    <h3>Byron Buxton to hit a HR</h3>
+    <p>Power bat with 2 HRs and strong contact vs Patrick Corbin.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Jonathan Aranda to record a hit</h3>
-    <p>1.0 AVG vs Walker Buehler makes this a clean look.</p>
+    <h3>Yainer Diaz Hit Prop</h3>
+    <p>Batting 1.0 vs Davis Martin — strong contact spot.</p>
 </div>
 
 <div class="prop-card">
-    <h3>chicagocubs vs philadelphiaphillies NRFI Pick</h3>
-    <p>Two quick starters: Jesus Luzardo and Ben Brown.</p>
+    <h3>st.louiscardinals vs milwaukeebrewers NRFI Pick</h3>
+    <p>Low 1st-inning scoring profile with J. Misiorowski and Sonny Gray.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Chicago Cubs@Philadelphia Phillies could explode offensively</span></h3>
-    <p><span class="blurred">77.0% model chance of a high-scoring affair at Citizens Bank Park.</span></p>
+    <h3><span class="blurred">Washington Nationals vs New York Mets run fest?</span></h3>
+    <p><span class="blurred">nan% model chance of a high-scoring affair at Citi Field.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
