🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Tarik Skubal is projected to whiff 8.4</h3>
-    <p>Great K% matchup vs Orioles — projected for 8.4 strikeouts.</p>
+    <h3>Paul Skenes is projected to whiff 7.2</h3>
+    <p>Paul Skenes faces Cubs, who strike out 21.5% of the time.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Byron Buxton to hit a HR</h3>
-    <p>Power bat with 2 HRs and strong contact vs Patrick Corbin.</p>
+    <h3>Pedro Pages HR prop</h3>
+    <p>Pedro Pages has hit 2 already and owns a 150.0% hard-hit rate vs Freddy Peralta.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Yainer Diaz Hit Prop</h3>
-    <p>Batting 1.0 vs Davis Martin — strong contact spot.</p>
+    <h3>Brooks Lee Hit Prop</h3>
+    <p>Riding a 12-game hit streak.</p>
 </div>
 
 <div class="prop-card">
-    <h3>st.louiscardinals vs milwaukeebrewers NRFI Pick</h3>
-    <p>Low 1st-inning scoring profile with J. Misiorowski and Sonny Gray.</p>
+    <h3>torontobluejays vs philadelphiaphillies NRFI Pick</h3>
+    <p>Two quick starters: Ranger Suarez and Kevin Gausman.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Washington Nationals vs New York Mets run fest?</span></h3>
-    <p><span class="blurred">nan% model chance of a high-scoring affair at Citi Field.</span></p>
+    <h3><span class="blurred">Cleveland Guardians vs Seattle Mariners — total runs over</span></h3>
+    <p><span class="blurred">All signs point to a shootout at T-Mobile Park (37.0%).</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
