🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Nick Pivetta racks up Ks today</h3>
-    <p>Nick Pivetta faces Diamondbacks, who strike out 18.9% of the time.</p>
+    <h3>Logan Gilbert over 7.8 Ks</h3>
+    <p>Logan Gilbert faces Red Sox, who strike out 23.3% of the time.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Bryan Reynolds has HR potential</h3>
-    <p>Power bat with 2 HRs and strong contact vs Colin Rea.</p>
+    <h3>Jose Altuve HR prop</h3>
+    <p>Power bat with 2 HRs and strong contact vs JP Sears.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Brooks Lee to record a hit</h3>
-    <p>14-game streak — bat is staying hot.</p>
+    <h3>Brooks Lee Hit Prop</h3>
+    <p>Riding a 15-game hit streak.</p>
 </div>
 
 <div class="prop-card">
-    <h3>NRFI: torontobluejays vs philadelphiaphillies</h3>
-    <p>Two quick starters: Zack Wheeler and Jose Berrios.</p>
+    <h3>NRFI: losangelesangels vs newyorkyankees</h3>
+    <p>Low 1st-inning scoring profile with Clarke Schmidt and Jose Soriano.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Toronto Blue Jays vs Philadelphia Phillies run fest?</span></h3>
-    <p><span class="blurred">Citizens Bank Park is a run-friendly park — 100.0% chance of fireworks.</span></p>
+    <h3><span class="blurred">Philadelphia Phillies@Miami Marlins could explode offensively</span></h3>
+    <p><span class="blurred">nan% model chance of a high-scoring affair at loanDepot park.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
