--- a/nrfi.html
+++ b/nrfi.html
@@ -27,217 +27,113 @@ a:hover {text-decoration: underline;}
 </div>
 
 
-<h1 style='text-align:center;font-family:sans-serif;'>NRFI Predictions for 2025-06-15</h1>
+<h1 style='text-align:center;font-family:sans-serif;'>NRFI Predictions for 2025-06-16</h1>
 <style type="text/css">
-#T_45a9e_row0_col0, #T_45a9e_row0_col1, #T_45a9e_row0_col2, #T_45a9e_row0_col3, #T_45a9e_row0_col4, #T_45a9e_row0_col5, #T_45a9e_row0_col6 {
+#T_d3b84_row0_col0, #T_d3b84_row0_col1, #T_d3b84_row0_col2, #T_d3b84_row0_col3, #T_d3b84_row0_col4, #T_d3b84_row0_col5, #T_d3b84_row0_col6 {
   background-color: rgba(0, 104, 55, 0.6);
 }
-#T_45a9e_row1_col0, #T_45a9e_row1_col1, #T_45a9e_row1_col2, #T_45a9e_row1_col3, #T_45a9e_row1_col4, #T_45a9e_row1_col5, #T_45a9e_row1_col6 {
-  background-color: rgba(18, 137, 72, 0.6);
+#T_d3b84_row1_col0, #T_d3b84_row1_col1, #T_d3b84_row1_col2, #T_d3b84_row1_col3, #T_d3b84_row1_col4, #T_d3b84_row1_col5, #T_d3b84_row1_col6 {
+  background-color: rgba(75, 175, 92, 0.6);
 }
-#T_45a9e_row2_col0, #T_45a9e_row2_col1, #T_45a9e_row2_col2, #T_45a9e_row2_col3, #T_45a9e_row2_col4, #T_45a9e_row2_col5, #T_45a9e_row2_col6 {
-  background-color: rgba(57, 167, 87, 0.6);
+#T_d3b84_row2_col0, #T_d3b84_row2_col1, #T_d3b84_row2_col2, #T_d3b84_row2_col3, #T_d3b84_row2_col4, #T_d3b84_row2_col5, #T_d3b84_row2_col6 {
+  background-color: rgba(183, 224, 117, 0.6);
 }
-#T_45a9e_row3_col0, #T_45a9e_row3_col1, #T_45a9e_row3_col2, #T_45a9e_row3_col3, #T_45a9e_row3_col4, #T_45a9e_row3_col5, #T_45a9e_row3_col6 {
-  background-color: rgba(109, 192, 99, 0.6);
-}
-#T_45a9e_row4_col0, #T_45a9e_row4_col1, #T_45a9e_row4_col2, #T_45a9e_row4_col3, #T_45a9e_row4_col4, #T_45a9e_row4_col5, #T_45a9e_row4_col6 {
-  background-color: rgba(157, 213, 105, 0.6);
-}
-#T_45a9e_row5_col0, #T_45a9e_row5_col1, #T_45a9e_row5_col2, #T_45a9e_row5_col3, #T_45a9e_row5_col4, #T_45a9e_row5_col5, #T_45a9e_row5_col6 {
-  background-color: rgba(195, 229, 124, 0.6);
-}
-#T_45a9e_row6_col0, #T_45a9e_row6_col1, #T_45a9e_row6_col2, #T_45a9e_row6_col3, #T_45a9e_row6_col4, #T_45a9e_row6_col5, #T_45a9e_row6_col6 {
-  background-color: rgba(227, 243, 153, 0.6);
-}
-#T_45a9e_row7_col0, #T_45a9e_row7_col1, #T_45a9e_row7_col2, #T_45a9e_row7_col3, #T_45a9e_row7_col4, #T_45a9e_row7_col5, #T_45a9e_row7_col6 {
+#T_d3b84_row3_col0, #T_d3b84_row3_col1, #T_d3b84_row3_col2, #T_d3b84_row3_col3, #T_d3b84_row3_col4, #T_d3b84_row3_col5, #T_d3b84_row3_col6 {
   background-color: rgba(254, 254, 189, 0.6);
 }
-#T_45a9e_row8_col0, #T_45a9e_row8_col1, #T_45a9e_row8_col2, #T_45a9e_row8_col3, #T_45a9e_row8_col4, #T_45a9e_row8_col5, #T_45a9e_row8_col6 {
-  background-color: rgba(254, 232, 153, 0.6);
+#T_d3b84_row4_col0, #T_d3b84_row4_col1, #T_d3b84_row4_col2, #T_d3b84_row4_col3, #T_d3b84_row4_col4, #T_d3b84_row4_col5, #T_d3b84_row4_col6 {
+  background-color: rgba(253, 190, 111, 0.6);
 }
-#T_45a9e_row9_col0, #T_45a9e_row9_col1, #T_45a9e_row9_col2, #T_45a9e_row9_col3, #T_45a9e_row9_col4, #T_45a9e_row9_col5, #T_45a9e_row9_col6 {
-  background-color: rgba(253, 202, 120, 0.6);
+#T_d3b84_row5_col0, #T_d3b84_row5_col1, #T_d3b84_row5_col2, #T_d3b84_row5_col3, #T_d3b84_row5_col4, #T_d3b84_row5_col5, #T_d3b84_row5_col6 {
+  background-color: rgba(233, 87, 57, 0.6);
 }
-#T_45a9e_row10_col0, #T_45a9e_row10_col1, #T_45a9e_row10_col2, #T_45a9e_row10_col3, #T_45a9e_row10_col4, #T_45a9e_row10_col5, #T_45a9e_row10_col6 {
-  background-color: rgba(251, 165, 92, 0.6);
-}
-#T_45a9e_row11_col0, #T_45a9e_row11_col1, #T_45a9e_row11_col2, #T_45a9e_row11_col3, #T_45a9e_row11_col4, #T_45a9e_row11_col5, #T_45a9e_row11_col6 {
-  background-color: rgba(245, 116, 70, 0.6);
-}
-#T_45a9e_row12_col0, #T_45a9e_row12_col1, #T_45a9e_row12_col2, #T_45a9e_row12_col3, #T_45a9e_row12_col4, #T_45a9e_row12_col5, #T_45a9e_row12_col6 {
-  background-color: rgba(226, 73, 50, 0.6);
-}
-#T_45a9e_row13_col0, #T_45a9e_row13_col1, #T_45a9e_row13_col2, #T_45a9e_row13_col3, #T_45a9e_row13_col4, #T_45a9e_row13_col5, #T_45a9e_row13_col6 {
-  background-color: rgba(200, 33, 38, 0.6);
-}
-#T_45a9e_row14_col0, #T_45a9e_row14_col1, #T_45a9e_row14_col2, #T_45a9e_row14_col3, #T_45a9e_row14_col4, #T_45a9e_row14_col5, #T_45a9e_row14_col6 {
+#T_d3b84_row6_col0, #T_d3b84_row6_col1, #T_d3b84_row6_col2, #T_d3b84_row6_col3, #T_d3b84_row6_col4, #T_d3b84_row6_col5, #T_d3b84_row6_col6 {
   background-color: rgba(165, 0, 38, 0.6);
 }
 </style>
-<table id="T_45a9e">
+<table id="T_d3b84">
   <thead>
     <tr>
       <th class="blank level0" >&nbsp;</th>
-      <th id="T_45a9e_level0_col0" class="col_heading level0 col0" >Game Time</th>
-      <th id="T_45a9e_level0_col1" class="col_heading level0 col1" >Matchup</th>
-      <th id="T_45a9e_level0_col2" class="col_heading level0 col2" >Home Pitcher</th>
-      <th id="T_45a9e_level0_col3" class="col_heading level0 col3" >Away Pitcher</th>
-      <th id="T_45a9e_level0_col4" class="col_heading level0 col4" >Top Half NRFI (%)</th>
-      <th id="T_45a9e_level0_col5" class="col_heading level0 col5" >Bottom Half NRFI (%)</th>
-      <th id="T_45a9e_level0_col6" class="col_heading level0 col6" >Final NRFI Probability (%)</th>
+      <th id="T_d3b84_level0_col0" class="col_heading level0 col0" >Game Time</th>
+      <th id="T_d3b84_level0_col1" class="col_heading level0 col1" >Matchup</th>
+      <th id="T_d3b84_level0_col2" class="col_heading level0 col2" >Home Pitcher</th>
+      <th id="T_d3b84_level0_col3" class="col_heading level0 col3" >Away Pitcher</th>
+      <th id="T_d3b84_level0_col4" class="col_heading level0 col4" >Top Half NRFI (%)</th>
+      <th id="T_d3b84_level0_col5" class="col_heading level0 col5" >Bottom Half NRFI (%)</th>
+      <th id="T_d3b84_level0_col6" class="col_heading level0 col6" >Final NRFI Probability (%)</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <th id="T_45a9e_level0_row0" class="row_heading level0 row0" >6</th>
-      <td id="T_45a9e_row0_col0" class="data row0 col0" >None</td>
-      <td id="T_45a9e_row0_col1" class="data row0 col1" >tampabayrays vs newyorkmets</td>
-      <td id="T_45a9e_row0_col2" class="data row0 col2" >Griffin Canning</td>
-      <td id="T_45a9e_row0_col3" class="data row0 col3" >Shane Baz</td>
-      <td id="T_45a9e_row0_col4" class="data row0 col4" >4.300000</td>
-      <td id="T_45a9e_row0_col5" class="data row0 col5" >4.600000</td>
-      <td id="T_45a9e_row0_col6" class="data row0 col6" >0.200000</td>
+      <th id="T_d3b84_level0_row0" class="row_heading level0 row0" >5</th>
+      <td id="T_d3b84_row0_col0" class="data row0 col0" >None</td>
+      <td id="T_d3b84_row0_col1" class="data row0 col1" >houstonastros vs oaklandathletics</td>
+      <td id="T_d3b84_row0_col2" class="data row0 col2" >JP Sears</td>
+      <td id="T_d3b84_row0_col3" class="data row0 col3" >Lance McCullers</td>
+      <td id="T_d3b84_row0_col4" class="data row0 col4" >2.500000</td>
+      <td id="T_d3b84_row0_col5" class="data row0 col5" >4.400000</td>
+      <td id="T_d3b84_row0_col6" class="data row0 col6" >0.100000</td>
     </tr>
     <tr>
-      <th id="T_45a9e_level0_row1" class="row_heading level0 row1" >7</th>
-      <td id="T_45a9e_row1_col0" class="data row1 col0" >None</td>
-      <td id="T_45a9e_row1_col1" class="data row1 col1" >oaklandathletics vs kansascityroyals</td>
-      <td id="T_45a9e_row1_col2" class="data row1 col2" >Noah Cameron</td>
-      <td id="T_45a9e_row1_col3" class="data row1 col3" >Jeffrey Springs</td>
-      <td id="T_45a9e_row1_col4" class="data row1 col4" >5.200000</td>
-      <td id="T_45a9e_row1_col5" class="data row1 col5" >4.100000</td>
-      <td id="T_45a9e_row1_col6" class="data row1 col6" >0.200000</td>
+      <th id="T_d3b84_level0_row1" class="row_heading level0 row1" >1</th>
+      <td id="T_d3b84_row1_col0" class="data row1 col0" >None</td>
+      <td id="T_d3b84_row1_col1" class="data row1 col1" >coloradorockies vs washingtonnationals</td>
+      <td id="T_d3b84_row1_col2" class="data row1 col2" >Jake Irvin</td>
+      <td id="T_d3b84_row1_col3" class="data row1 col3" >Carson Palmquist</td>
+      <td id="T_d3b84_row1_col4" class="data row1 col4" >5.200000</td>
+      <td id="T_d3b84_row1_col5" class="data row1 col5" >4.600000</td>
+      <td id="T_d3b84_row1_col6" class="data row1 col6" >0.200000</td>
     </tr>
     <tr>
-      <th id="T_45a9e_level0_row2" class="row_heading level0 row2" >5</th>
-      <td id="T_45a9e_row2_col0" class="data row2 col0" >None</td>
-      <td id="T_45a9e_row2_col1" class="data row2 col1" >newyorkyankees vs bostonredsox</td>
-      <td id="T_45a9e_row2_col2" class="data row2 col2" >Brayan Bello</td>
-      <td id="T_45a9e_row2_col3" class="data row2 col3" >Max Fried</td>
-      <td id="T_45a9e_row2_col4" class="data row2 col4" >3.400000</td>
-      <td id="T_45a9e_row2_col5" class="data row2 col5" >5.800000</td>
-      <td id="T_45a9e_row2_col6" class="data row2 col6" >0.200000</td>
+      <th id="T_d3b84_level0_row2" class="row_heading level0 row2" >3</th>
+      <td id="T_d3b84_row2_col0" class="data row2 col0" >None</td>
+      <td id="T_d3b84_row2_col1" class="data row2 col1" >baltimoreorioles vs tampabayrays</td>
+      <td id="T_d3b84_row2_col2" class="data row2 col2" >Ryan Pepiot</td>
+      <td id="T_d3b84_row2_col3" class="data row2 col3" >Zach Eflin</td>
+      <td id="T_d3b84_row2_col4" class="data row2 col4" >5.900000</td>
+      <td id="T_d3b84_row2_col5" class="data row2 col5" >5.600000</td>
+      <td id="T_d3b84_row2_col6" class="data row2 col6" >0.300000</td>
     </tr>
     <tr>
-      <th id="T_45a9e_level0_row3" class="row_heading level0 row3" >9</th>
-      <td id="T_45a9e_row3_col0" class="data row3 col0" >None</td>
-      <td id="T_45a9e_row3_col1" class="data row3 col1" >st.louiscardinals vs milwaukeebrewers</td>
-      <td id="T_45a9e_row3_col2" class="data row3 col2" >Quinn Priester</td>
-      <td id="T_45a9e_row3_col3" class="data row3 col3" >Miles Mikolas</td>
-      <td id="T_45a9e_row3_col4" class="data row3 col4" >3.700000</td>
-      <td id="T_45a9e_row3_col5" class="data row3 col5" >4.700000</td>
-      <td id="T_45a9e_row3_col6" class="data row3 col6" >0.200000</td>
+      <th id="T_d3b84_level0_row3" class="row_heading level0 row3" >0</th>
+      <td id="T_d3b84_row3_col0" class="data row3 col0" >None</td>
+      <td id="T_d3b84_row3_col1" class="data row3 col1" >philadelphiaphillies vs miamimarlins</td>
+      <td id="T_d3b84_row3_col2" class="data row3 col2" >Sandy Alcantara</td>
+      <td id="T_d3b84_row3_col3" class="data row3 col3" >Mick Abel</td>
+      <td id="T_d3b84_row3_col4" class="data row3 col4" >5.600000</td>
+      <td id="T_d3b84_row3_col5" class="data row3 col5" >5.400000</td>
+      <td id="T_d3b84_row3_col6" class="data row3 col6" >0.300000</td>
     </tr>
     <tr>
-      <th id="T_45a9e_level0_row4" class="row_heading level0 row4" >10</th>
-      <td id="T_45a9e_row4_col0" class="data row4 col0" >None</td>
-      <td id="T_45a9e_row4_col1" class="data row4 col1" >pittsburghpirates vs chicagocubs</td>
-      <td id="T_45a9e_row4_col2" class="data row4 col2" >Colin Rea</td>
-      <td id="T_45a9e_row4_col3" class="data row4 col3" >Mitch Keller</td>
-      <td id="T_45a9e_row4_col4" class="data row4 col4" >5.200000</td>
-      <td id="T_45a9e_row4_col5" class="data row4 col5" >3.400000</td>
-      <td id="T_45a9e_row4_col6" class="data row4 col6" >0.200000</td>
+      <th id="T_d3b84_level0_row4" class="row_heading level0 row4" >6</th>
+      <td id="T_d3b84_row4_col0" class="data row4 col0" >None</td>
+      <td id="T_d3b84_row4_col1" class="data row4 col1" >sandiegopadres vs losangelesdodgers</td>
+      <td id="T_d3b84_row4_col2" class="data row4 col2" >Ben Casparius</td>
+      <td id="T_d3b84_row4_col3" class="data row4 col3" >Dylan Cease</td>
+      <td id="T_d3b84_row4_col4" class="data row4 col4" >6.600000</td>
+      <td id="T_d3b84_row4_col5" class="data row4 col5" >6.200000</td>
+      <td id="T_d3b84_row4_col6" class="data row4 col6" >0.400000</td>
     </tr>
     <tr>
-      <th id="T_45a9e_level0_row5" class="row_heading level0 row5" >11</th>
-      <td id="T_45a9e_row5_col0" class="data row5 col0" >None</td>
-      <td id="T_45a9e_row5_col1" class="data row5 col1" >chicagowhitesox vs texasrangers</td>
-      <td id="T_45a9e_row5_col2" class="data row5 col2" >Kumar Rocker</td>
-      <td id="T_45a9e_row5_col3" class="data row5 col3" >Aaron Civale</td>
-      <td id="T_45a9e_row5_col4" class="data row5 col4" >6.100000</td>
-      <td id="T_45a9e_row5_col5" class="data row5 col5" >4.300000</td>
-      <td id="T_45a9e_row5_col6" class="data row5 col6" >0.300000</td>
+      <th id="T_d3b84_level0_row5" class="row_heading level0 row5" >4</th>
+      <td id="T_d3b84_row5_col0" class="data row5 col0" >None</td>
+      <td id="T_d3b84_row5_col1" class="data row5 col1" >bostonredsox vs seattlemariners</td>
+      <td id="T_d3b84_row5_col2" class="data row5 col2" >Logan Gilbert</td>
+      <td id="T_d3b84_row5_col3" class="data row5 col3" >Lucas Giolito</td>
+      <td id="T_d3b84_row5_col4" class="data row5 col4" >5.500000</td>
+      <td id="T_d3b84_row5_col5" class="data row5 col5" >9.100000</td>
+      <td id="T_d3b84_row5_col6" class="data row5 col6" >0.500000</td>
     </tr>
     <tr>
-      <th id="T_45a9e_level0_row6" class="row_heading level0 row6" >12</th>
-      <td id="T_45a9e_row6_col0" class="data row6 col0" >None</td>
-      <td id="T_45a9e_row6_col1" class="data row6 col1" >sandiegopadres vs arizonadiamondbacks</td>
-      <td id="T_45a9e_row6_col2" class="data row6 col2" >Merrill Kelly</td>
-      <td id="T_45a9e_row6_col3" class="data row6 col3" >Nick Pivetta</td>
-      <td id="T_45a9e_row6_col4" class="data row6 col4" >6.800000</td>
-      <td id="T_45a9e_row6_col5" class="data row6 col5" >4.400000</td>
-      <td id="T_45a9e_row6_col6" class="data row6 col6" >0.300000</td>
-    </tr>
-    <tr>
-      <th id="T_45a9e_level0_row7" class="row_heading level0 row7" >14</th>
-      <td id="T_45a9e_row7_col0" class="data row7 col0" >None</td>
-      <td id="T_45a9e_row7_col1" class="data row7 col1" >sanfranciscogiants vs losangelesdodgers</td>
-      <td id="T_45a9e_row7_col2" class="data row7 col2" >Dustin May</td>
-      <td id="T_45a9e_row7_col3" class="data row7 col3" >Kyle Harrison</td>
-      <td id="T_45a9e_row7_col4" class="data row7 col4" >5.100000</td>
-      <td id="T_45a9e_row7_col5" class="data row7 col5" >5.000000</td>
-      <td id="T_45a9e_row7_col6" class="data row7 col6" >0.300000</td>
-    </tr>
-    <tr>
-      <th id="T_45a9e_level0_row8" class="row_heading level0 row8" >13</th>
-      <td id="T_45a9e_row8_col0" class="data row8 col0" >None</td>
-      <td id="T_45a9e_row8_col1" class="data row8 col1" >clevelandguardians vs seattlemariners</td>
-      <td id="T_45a9e_row8_col2" class="data row8 col2" >Emerson Hancock</td>
-      <td id="T_45a9e_row8_col3" class="data row8 col3" >Luis L. Ortiz</td>
-      <td id="T_45a9e_row8_col4" class="data row8 col4" >4.800000</td>
-      <td id="T_45a9e_row8_col5" class="data row8 col5" >5.400000</td>
-      <td id="T_45a9e_row8_col6" class="data row8 col6" >0.300000</td>
-    </tr>
-    <tr>
-      <th id="T_45a9e_level0_row9" class="row_heading level0 row9" >1</th>
-      <td id="T_45a9e_row9_col0" class="data row9 col0" >None</td>
-      <td id="T_45a9e_row9_col1" class="data row9 col1" >losangelesangels vs baltimoreorioles</td>
-      <td id="T_45a9e_row9_col2" class="data row9 col2" >Cade Povich</td>
-      <td id="T_45a9e_row9_col3" class="data row9 col3" >Yusei Kikuchi</td>
-      <td id="T_45a9e_row9_col4" class="data row9 col4" >6.100000</td>
-      <td id="T_45a9e_row9_col5" class="data row9 col5" >5.900000</td>
-      <td id="T_45a9e_row9_col6" class="data row9 col6" >0.400000</td>
-    </tr>
-    <tr>
-      <th id="T_45a9e_level0_row10" class="row_heading level0 row10" >8</th>
-      <td id="T_45a9e_row10_col0" class="data row10 col0" >None</td>
-      <td id="T_45a9e_row10_col1" class="data row10 col1" >minnesotatwins vs houstonastros</td>
-      <td id="T_45a9e_row10_col2" class="data row10 col2" >Brandon Walter</td>
-      <td id="T_45a9e_row10_col3" class="data row10 col3" >Simeon Woods Richardson</td>
-      <td id="T_45a9e_row10_col4" class="data row10 col4" >5.500000</td>
-      <td id="T_45a9e_row10_col5" class="data row10 col5" >7.500000</td>
-      <td id="T_45a9e_row10_col6" class="data row10 col6" >0.400000</td>
-    </tr>
-    <tr>
-      <th id="T_45a9e_level0_row11" class="row_heading level0 row11" >3</th>
-      <td id="T_45a9e_row11_col0" class="data row11 col0" >None</td>
-      <td id="T_45a9e_row11_col1" class="data row11 col1" >coloradorockies vs atlantabraves</td>
-      <td id="T_45a9e_row11_col2" class="data row11 col2" >Grant Holmes</td>
-      <td id="T_45a9e_row11_col3" class="data row11 col3" >Austin Gomber</td>
-      <td id="T_45a9e_row11_col4" class="data row11 col4" >4.300000</td>
-      <td id="T_45a9e_row11_col5" class="data row11 col5" >9.100000</td>
-      <td id="T_45a9e_row11_col6" class="data row11 col6" >0.400000</td>
-    </tr>
-    <tr>
-      <th id="T_45a9e_level0_row12" class="row_heading level0 row12" >0</th>
-      <td id="T_45a9e_row12_col0" class="data row12 col0" >None</td>
-      <td id="T_45a9e_row12_col1" class="data row12 col1" >cincinnatireds vs detroittigers</td>
-      <td id="T_45a9e_row12_col2" class="data row12 col2" >S. Gipson-Long</td>
-      <td id="T_45a9e_row12_col3" class="data row12 col3" >Wade Miley</td>
-      <td id="T_45a9e_row12_col4" class="data row12 col4" >4.500000</td>
-      <td id="T_45a9e_row12_col5" class="data row12 col5" >62.300000</td>
-      <td id="T_45a9e_row12_col6" class="data row12 col6" >2.800000</td>
-    </tr>
-    <tr>
-      <th id="T_45a9e_level0_row13" class="row_heading level0 row13" >4</th>
-      <td id="T_45a9e_row13_col0" class="data row13 col0" >None</td>
-      <td id="T_45a9e_row13_col1" class="data row13 col1" >miamimarlins vs washingtonnationals</td>
-      <td id="T_45a9e_row13_col2" class="data row13 col2" >MacKenzie Gore</td>
-      <td id="T_45a9e_row13_col3" class="data row13 col3" >Eury Perez</td>
-      <td id="T_45a9e_row13_col4" class="data row13 col4" >61.100000</td>
-      <td id="T_45a9e_row13_col5" class="data row13 col5" >7.000000</td>
-      <td id="T_45a9e_row13_col6" class="data row13 col6" >4.300000</td>
-    </tr>
-    <tr>
-      <th id="T_45a9e_level0_row14" class="row_heading level0 row14" >2</th>
-      <td id="T_45a9e_row14_col0" class="data row14 col0" >None</td>
-      <td id="T_45a9e_row14_col1" class="data row14 col1" >torontobluejays vs philadelphiaphillies</td>
-      <td id="T_45a9e_row14_col2" class="data row14 col2" >Zack Wheeler</td>
-      <td id="T_45a9e_row14_col3" class="data row14 col3" >Jose Berrios</td>
-      <td id="T_45a9e_row14_col4" class="data row14 col4" >60.500000</td>
-      <td id="T_45a9e_row14_col5" class="data row14 col5" >7.700000</td>
-      <td id="T_45a9e_row14_col6" class="data row14 col6" >4.700000</td>
+      <th id="T_d3b84_level0_row6" class="row_heading level0 row6" >2</th>
+      <td id="T_d3b84_row6_col0" class="data row6 col0" >None</td>
+      <td id="T_d3b84_row6_col1" class="data row6 col1" >losangelesangels vs newyorkyankees</td>
+      <td id="T_d3b84_row6_col2" class="data row6 col2" >Clarke Schmidt</td>
+      <td id="T_d3b84_row6_col3" class="data row6 col3" >Jose Soriano</td>
+      <td id="T_d3b84_row6_col4" class="data row6 col4" >61.400000</td>
+      <td id="T_d3b84_row6_col5" class="data row6 col5" >5.600000</td>
+      <td id="T_d3b84_row6_col6" class="data row6 col6" >3.400000</td>
     </tr>
   </tbody>
 </table>
