🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Robbie Ray is projected to whiff 6.2</h3>
-    <p>Great K% matchup vs Guardians — projected for 6.2 strikeouts.</p>
+    <h3>Sonny Gray is projected to whiff 7.6</h3>
+    <p>Great K% matchup vs White Sox — projected for 7.6 strikeouts.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Jose Altuve has HR potential</h3>
-    <p>Power bat with 2 HRs and strong contact vs JP Sears.</p>
+    <h3>TJ Friedl HR prop</h3>
+    <p>Power bat with 1 HRs and strong contact vs Bailey Ober.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Brooks Lee knocks one?</h3>
-    <p>🔥 15 straight games with a hit.</p>
+    <h3>TJ Friedl knocks one?</h3>
+    <p>0.667 AVG vs Bailey Ober makes this a clean look.</p>
 </div>
 
 <div class="prop-card">
-    <h3>NRFI: sandiegopadres vs losangelesdodgers</h3>
-    <p>Low 1st-inning scoring profile with Matt Sauer and Randy Vasquez.</p>
+    <h3>No Run 1st Inning — milwaukeebrewers vs chicagocubs</h3>
+    <p>Two quick starters: Jameson Taillon and J. Misiorowski.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Boston Red Sox vs Seattle Mariners — total runs over</span></h3>
-    <p><span class="blurred">T-Mobile Park is a run-friendly park — 67.0% chance of fireworks.</span></p>
+    <h3><span class="blurred">Boston Red Sox vs Seattle Mariners run fest?</span></h3>
+    <p><span class="blurred">T-Mobile Park is a run-friendly park — 45.0% chance of fireworks.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
