🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Tarik Skubal over 6.7 Ks</h3>
-    <p>Great K% matchup vs Pirates — projected for 6.7 strikeouts.</p>
+    <h3>Zack Wheeler is projected to whiff 7.0</h3>
+    <p>Zack Wheeler faces Mets, who strike out 20.4% of the time.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Manny Machado HR prop</h3>
-    <p>Power bat with 2 HRs and strong contact vs Yoshinobu Yamamoto.</p>
+    <h3>Jordan Beck has HR potential</h3>
+    <p>Power bat with 1 HRs and strong contact vs Zac Gallen.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Colton Cowser knocks one?</h3>
-    <p>High-contact profile vs today's pitcher Drew Rasmussen.</p>
+    <h3>Shohei Ohtani to record a hit</h3>
+    <p>High-contact profile vs today's pitcher MacKenzie Gore.</p>
 </div>
 
 <div class="prop-card">
-    <h3>philadelphiaphillies vs miamimarlins NRFI Pick</h3>
-    <p>Low 1st-inning scoring profile with Edward Cabrera and Cristopher Sanchez.</p>
+    <h3>milwaukeebrewers vs minnesotatwins NRFI Pick</h3>
+    <p>Joe Ryan and J. Misiorowski tend to shut it down early — NRFI value here.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Arizona Diamondbacks vs Toronto Blue Jays — total runs over</span></h3>
-    <p><span class="blurred">Rogers Centre is a run-friendly park — 61.0% chance of fireworks.</span></p>
+    <h3><span class="blurred">Seattle Mariners vs Chicago Cubs run fest?</span></h3>
+    <p><span class="blurred">nan% model chance of a high-scoring affair at Wrigley Field.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
