🔄 Auto update HTMLs

--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Zack Wheeler is projected to whiff 7.0</h3>
-    <p>Zack Wheeler faces Mets, who strike out 20.4% of the time.</p>
+    <h3>Merrill Kelly racks up Ks today</h3>
+    <p>Merrill Kelly faces Rockies, who strike out 26.5% of the time.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Jordan Beck has HR potential</h3>
-    <p>Power bat with 1 HRs and strong contact vs Zac Gallen.</p>
+    <h3>Spencer Steer HR prop</h3>
+    <p>37.5% hard-hit rate vs Sonny Gray — eyes on the fences.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Shohei Ohtani to record a hit</h3>
-    <p>High-contact profile vs today's pitcher MacKenzie Gore.</p>
+    <h3>Brooks Lee Hit Prop</h3>
+    <p>Riding a 19-game hit streak.</p>
 </div>
 
 <div class="prop-card">
-    <h3>milwaukeebrewers vs minnesotatwins NRFI Pick</h3>
-    <p>Joe Ryan and J. Misiorowski tend to shut it down early — NRFI value here.</p>
+    <h3>atlantabraves vs miamimarlins NRFI Pick</h3>
+    <p>Eury Perez and Grant Holmes tend to shut it down early — NRFI value here.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Seattle Mariners vs Chicago Cubs run fest?</span></h3>
-    <p><span class="blurred">nan% model chance of a high-scoring affair at Wrigley Field.</span></p>
+    <h3><span class="blurred">Chicago White Sox vs Toronto Blue Jays — total runs over</span></h3>
+    <p><span class="blurred">2.0% model chance of a high-scoring affair at Rogers Centre.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
